--- a/index.html
+++ b/index.html
@@ -47,18 +47,30 @@
 
 
 <div class="a">
-<p style="text-align:center;">前言
-9 月里一个温暖的傍晚，我们几位当时还很年轻的普斯科夫洞穴修道院的见 习修士，沿着过道和长廊登上修道院古老的高墙，心旷神怡地俯瞰近处的花园和 远处的田野。我们相互交谈，回忆起各自来到修道院的经历。我们彼此倾听愈 多，便愈觉惊奇。
-时在 1984 年。我们一共五位。其中四人生于非教会人士家庭，第五位是神 父之子，可他对修道院中出家人的了解也并未超出普通苏联人。在此前一年我们 还坚信，当今修道院中的出家人或为幻想家，或为生活中的失意者，当然，还有 无望爱情的牺牲品。
-然而，当我们彼此打量，却看到了完全不同的东西。我们中最年幼者年方 十八，最年长者则二十有六。我们全都健康强壮，年轻俊美。一位同伴是毕业于 大学数学系的高材生，另一位同伴虽然年轻，却已是列宁格勒的著名画家。还有 一位同伴的多半岁月在纽约度过，其父在那里工作，他在大学三年级辍学来到修 道院。最年幼的同伴系神父之子，他是一位天才雕刻家，刚刚毕业于艺术学校。 我则同样刚刚毕业于国立全苏电影学院编剧系。总之，我们每个人似乎都拥有值 得同辈青年羡慕的灿烂的世俗前程。
-那么，我们为何走进修道院，并心甘情愿地永远留在这里呢?我们对这一问 题的答案心知肚明。因为我们每个人都看见了一个无与伦比的美好世界。这个世 界无比诱人，胜过我们在其中度过不长岁月的那个世界，尽管我们此前度过的那 些世俗岁月也同样十分幸福。
-我想在此书里向你们介绍这个美好世界，在这个世界里，人们的生活法则与 通常的生活完全不同，这个世界充满无穷的光明，充满爱和欢乐的发现，充满希望和幸福，我们在其中获得各种体验，既有胜利的欢乐，也有失败的意义。最为 重要的是，我想在此书里向你们介绍神力和神助的强大显现。
-我无须任何杜撰，您在此读到的一切均为生活中的真人实事。书中谈到的许 多人，如今依然健在。开端
-我在 1982 年大学毕业后不久受洗，当时我二十四岁。我幼时是否曾经受 洗，无人知晓。当年常有此类事情发生 :外婆和姨妈往往私下为婴儿洗礼，瞒 着婴儿不信教的父母。此类情形下，神父在圣礼结束时会说 :“若未受洗，便受 洗。”意即 :“即便不曾受洗，上帝的奴仆亦终将受洗。”
-如同我的许多友人，我也在大学时走近信仰。在全苏国立电影学院有许多出 类拔萃的教师，他们给我们以严肃的人文教育，迫使我们思考人生的一些重大 问题。
-在教室和宿舍，在学生们钟爱的廉价咖啡馆，在夜间沿着莫斯科古老街巷的 漫步途中，我们探讨这些永恒问题、历史事件和我们所处的七八十年代的现实。 我们得出结论，意识到国家在欺骗我们，将其愚蠢荒谬的看法强加给我们，而且 不仅是在历史和政治领域。我们清楚地意识到，一切行动均遵循某一强大指令而 为，其目的就是要剥夺我们独立思考上帝和教会问题的可能性。
-对于我们大学里的无神论课教师而言，或对于我们中学时的少先队辅导员玛 丽娜而言，这个问题似乎简单明了。关于这一问题，一如关于任何其他人生问 题，玛丽娜均可给出确凿无疑的答案。可是逐渐地，我们却不无惊讶地发现，我 们于学习中在精神上结识的那些俄国史和世界史上的伟人，我们信赖、爱戴、敬 重的这些伟人，却对上帝持有完全不同的看法。简言之，他们均为有信仰之人， 如陀思妥耶夫斯基、康德、普希金、托尔斯泰、歌德、帕斯卡尔、黑格尔、洛谢 夫等，数不胜数。更遑论科学家，如牛顿、普朗克、林耐、门捷列夫等。我们对 科学家知之较少，因为我们接受的是人文教育，但在科学界情形同样如此。虽说 这些人对上帝的接受各不相同，但毫无疑问，他们大都将信仰问题视为人生中最重要的问题，亦是最复杂的问题。 而另外一些人，他们难以引起我们丝毫同情，他们制造了俄国历史上所有那
-些最可怕的事件，比如我们这个无神论国家的那些领导人、那些摧毁一切的革命 者，他们无一例外均为无神论者。于是我们便面临一个貌似简单却十分确凿的问 题:是普希金们、陀思妥耶夫斯基们和牛顿们过于肤浅幼稚，简直是傻瓜，竟难 以解答这一问题，还是我们和我们的少先队辅导员玛丽娜才是傻瓜?所有这一切 为我们年轻的脑袋提供了真正的思考契机。</div>
+<p style="text-align:center;">
+当年，在偌大的大学图书馆甚至不见一本《圣经》，更遑论教会作家和宗教 作家的著作。我们不得不四处搜寻关涉信仰的零星材料:或在无神论教科书中， 或在经典哲学家的作品里，当然，伟大的俄国文学也对我们产生了巨大影响。
+我很喜欢在晚间去莫斯科的教堂参加礼拜，虽说我当时对礼拜知之甚少。第 一次阅读《圣经》给我留下了深刻印象。我在一位浸礼会教徒处借得一部《圣 经》，一直读着，不愿还回去，我深知我无法再在别处觅得此书，那位教徒也并 未催促我还书。他一连数月试图劝我信教。可我当时不喜欢他们位于小乌佐夫胡 同的小教堂，但我至今仍对这位真诚的人心怀感激，感激他允许我把他的书据为 己有。
+如同所有年轻人，我与友人们亦将许多时间用于争论，其中包括关于信仰和 上帝的争论，我们一同阅读我觅得的《圣经》以及千方百计弄到的其他宗教书 籍。但我们中的大多数却始终没有受洗和入会，因为我们当时认为离开教会也能 行，即所谓“上帝在心中”。一切似乎均可如此继续下去，直到有一天我们终于 清楚地意识到教会究竟是什么，教会为何必不可少。
+我们的外国艺术史任课教师是帕奥拉·德米特里耶夫娜·沃尔科娃。她的课 生动有趣，但出于某些原因，或许因为她正处于寻求信仰的中途，她对我们讲了 许多她个人的精神感受和神秘体验。譬如，她曾用一两节课为我们介绍中国古代 的占卜书《易经》，她甚至把檀木棒和竹棒带到教室，教我们如何用这些工具占 卜未来。有一节课关涉少数专家方才知晓的题目，即伟大的俄国科学家德米特里·伊 万诺维奇·门捷列夫和弗拉基米尔·伊万诺维奇·维尔纳茨基曾多年研究招魂 术。虽然帕奥拉真心警告我们，迷恋此类实验会造成难以预料的后果，但我们仍 带着年轻人的好奇心十分向往这些诱人的神秘领域。
+我在此不再详细描述我们在门捷列夫学术著作中读到的、在莫斯科维尔纳茨 基博物馆工作人员处获悉的那些技术手段。我们对那些手段加以验证，结果发 现，我们可与我们难以接近、却真实存在的生物建立特殊联系。我们与这些隐秘 的新朋友彻夜长谈，他们现身为各种人，或是拿破仑，或是苏格拉底，或是我们 一位友人新近去世的外婆。这些人时常告诉我们一些非常有趣的事情。让我们大 惊失色的是，他们对每位在场者均知根知底。譬如，我们很想知道我们的一位同 学、后来的著名导演亚历山大·罗戈日金偷偷与何人散步至夜半时分。我们立马 听到一声回答 :“与二年级女生卡佳。”亚历山大恼羞成怒，火冒三丈，显而易 见，这一回答正中靶心。
+但还有更为惊人的“启示”。一次课间休息时，我的一位十分着迷此类实验 的友人，瞪着一双因彻夜不眠而熬得通红的眼睛，时而走近这位同学，时而冲 向那位同学，用可怕的低语问道 :米哈伊尔·戈尔巴乔夫是谁?无论我，还是 我的朋友们，当时对这个人名均一无所知。那位友人解释道 :“昨夜我问了斯大 林，谁将掌管我们国家。他回答说，是个叫戈尔巴乔夫的人。此人是谁，要搞 清楚!”
+三个月之后，一条先前或许不会使我们产生任何兴趣的消息却让我们目瞪口 呆:斯塔夫罗波尔边疆区党委第一书记米哈伊尔·戈尔巴乔夫被选为政治局候补 委员。
+不过，我们愈是热衷此类让人欲罢不能的实验，便愈加清晰地感觉到，我们 身边正发生着某种奇异不安之事。无缘无故，我们心中莫名的忧伤和彷徨愈来愈 强。我们无心做任何事情。无情的绝望控制着我们。这种状态逐月强化，直到我 们最终猜透，这状态与我们的夜间“谈伴”相关。此外，从我一直没有还给那位浸礼会教徒的《圣经》中我们又突然发现，此类实验不仅不受鼓励，而且如《圣 经》中所言，曾遭上帝诅咒。
+可我们还是没有意识到，我们遭遇了残酷无情、邪恶至极的力量，这些恶势 力侵入我们无忧无虑的欢乐生活，而我们大家对它毫无防备。
+一次，我留在友人们的宿舍过夜。我的同学伊万·洛希林和导演系学生萨 沙·奥尔科夫着手做他们的神秘实验。当时我们已数度发誓放弃此类活动，可是 毫无办法，因为与神秘世界的交往像毒品一样诱人。
+这一次，我的友人们继续进行昨天夜里中断的与“果戈理魂灵”的交谈。那 人的话语始终十分形象，用的是十九世纪初的语言。可这一天，他不知为何却拒 绝回答我们的问题。他在抱怨，他痛苦地呻吟，悲伤地叹息，让人痛心。他说他 很痛苦，难以承受。更重要的是，他请求我们帮助他。
+“您怎么啦?”我的友人们迷惑不解。
+“你们救救我!可怕，太可怕了! ...... ”那个神秘的魂灵在请求，“啊，难 受得不得了!求求你们救救我吧!”
+我们大家均真心爱戴尼古拉·瓦西里耶维奇·果戈理，我们也真心认为我们 是在与他交谈。
+“我们能为您做什么呢?”我们问道，衷心希望能帮助我们如此喜爱的这位 作家。
+“帮帮我!求求你们，别再拖延了!可怕的火焰，硫磺，受难 ...... 啊，受不 了了，你们帮帮我 ...... ”
+“怎么帮?我们怎么帮您呢?!”
+“你们真想救我?你们准备好了?” “是的，是的，准备好了!”我们热烈地回应，“可我们该怎么做呢?您是在
+另一个世界啊。” 那魂灵迟疑片刻，然后小心翼翼地答道 :
+“好小伙子们!如果你们真的怜悯我这个受难者 ...... ”“当然!您只要告诉我们该怎么做。”
+“啊，如果这样! ...... 那我 ...... 那我就给你们 ...... 一点毒药 ...... ”
+在理解了这句话的意思后，我们目瞪口呆。我们相互对视，即便在暗淡的 烛光下我们也能发现，我们大家均面如死灰。我们推倒椅子，慌不择路地逃出 房间。
+</div>
 
 
 
