--- a/index.html
+++ b/index.html
@@ -48,28 +48,59 @@
 
 <div class="a">
 <p style="text-align:center;">
-当年，在偌大的大学图书馆甚至不见一本《圣经》，更遑论教会作家和宗教 作家的著作。我们不得不四处搜寻关涉信仰的零星材料:或在无神论教科书中， 或在经典哲学家的作品里，当然，伟大的俄国文学也对我们产生了巨大影响。
-我很喜欢在晚间去莫斯科的教堂参加礼拜，虽说我当时对礼拜知之甚少。第 一次阅读《圣经》给我留下了深刻印象。我在一位浸礼会教徒处借得一部《圣 经》，一直读着，不愿还回去，我深知我无法再在别处觅得此书，那位教徒也并 未催促我还书。他一连数月试图劝我信教。可我当时不喜欢他们位于小乌佐夫胡 同的小教堂，但我至今仍对这位真诚的人心怀感激，感激他允许我把他的书据为 己有。
-如同所有年轻人，我与友人们亦将许多时间用于争论，其中包括关于信仰和 上帝的争论，我们一同阅读我觅得的《圣经》以及千方百计弄到的其他宗教书 籍。但我们中的大多数却始终没有受洗和入会，因为我们当时认为离开教会也能 行，即所谓“上帝在心中”。一切似乎均可如此继续下去，直到有一天我们终于 清楚地意识到教会究竟是什么，教会为何必不可少。
-我们的外国艺术史任课教师是帕奥拉·德米特里耶夫娜·沃尔科娃。她的课 生动有趣，但出于某些原因，或许因为她正处于寻求信仰的中途，她对我们讲了 许多她个人的精神感受和神秘体验。譬如，她曾用一两节课为我们介绍中国古代 的占卜书《易经》，她甚至把檀木棒和竹棒带到教室，教我们如何用这些工具占 卜未来。有一节课关涉少数专家方才知晓的题目，即伟大的俄国科学家德米特里·伊 万诺维奇·门捷列夫和弗拉基米尔·伊万诺维奇·维尔纳茨基曾多年研究招魂 术。虽然帕奥拉真心警告我们，迷恋此类实验会造成难以预料的后果，但我们仍 带着年轻人的好奇心十分向往这些诱人的神秘领域。
-我在此不再详细描述我们在门捷列夫学术著作中读到的、在莫斯科维尔纳茨 基博物馆工作人员处获悉的那些技术手段。我们对那些手段加以验证，结果发 现，我们可与我们难以接近、却真实存在的生物建立特殊联系。我们与这些隐秘 的新朋友彻夜长谈，他们现身为各种人，或是拿破仑，或是苏格拉底，或是我们 一位友人新近去世的外婆。这些人时常告诉我们一些非常有趣的事情。让我们大 惊失色的是，他们对每位在场者均知根知底。譬如，我们很想知道我们的一位同 学、后来的著名导演亚历山大·罗戈日金偷偷与何人散步至夜半时分。我们立马 听到一声回答 :“与二年级女生卡佳。”亚历山大恼羞成怒，火冒三丈，显而易 见，这一回答正中靶心。
-但还有更为惊人的“启示”。一次课间休息时，我的一位十分着迷此类实验 的友人，瞪着一双因彻夜不眠而熬得通红的眼睛，时而走近这位同学，时而冲 向那位同学，用可怕的低语问道 :米哈伊尔·戈尔巴乔夫是谁?无论我，还是 我的朋友们，当时对这个人名均一无所知。那位友人解释道 :“昨夜我问了斯大 林，谁将掌管我们国家。他回答说，是个叫戈尔巴乔夫的人。此人是谁，要搞 清楚!”
-三个月之后，一条先前或许不会使我们产生任何兴趣的消息却让我们目瞪口 呆:斯塔夫罗波尔边疆区党委第一书记米哈伊尔·戈尔巴乔夫被选为政治局候补 委员。
-不过，我们愈是热衷此类让人欲罢不能的实验，便愈加清晰地感觉到，我们 身边正发生着某种奇异不安之事。无缘无故，我们心中莫名的忧伤和彷徨愈来愈 强。我们无心做任何事情。无情的绝望控制着我们。这种状态逐月强化，直到我 们最终猜透，这状态与我们的夜间“谈伴”相关。此外，从我一直没有还给那位浸礼会教徒的《圣经》中我们又突然发现，此类实验不仅不受鼓励，而且如《圣 经》中所言，曾遭上帝诅咒。
-可我们还是没有意识到，我们遭遇了残酷无情、邪恶至极的力量，这些恶势 力侵入我们无忧无虑的欢乐生活，而我们大家对它毫无防备。
-一次，我留在友人们的宿舍过夜。我的同学伊万·洛希林和导演系学生萨 沙·奥尔科夫着手做他们的神秘实验。当时我们已数度发誓放弃此类活动，可是 毫无办法，因为与神秘世界的交往像毒品一样诱人。
-这一次，我的友人们继续进行昨天夜里中断的与“果戈理魂灵”的交谈。那 人的话语始终十分形象，用的是十九世纪初的语言。可这一天，他不知为何却拒 绝回答我们的问题。他在抱怨，他痛苦地呻吟，悲伤地叹息，让人痛心。他说他 很痛苦，难以承受。更重要的是，他请求我们帮助他。
-“您怎么啦?”我的友人们迷惑不解。
-“你们救救我!可怕，太可怕了! ...... ”那个神秘的魂灵在请求，“啊，难 受得不得了!求求你们救救我吧!”
-我们大家均真心爱戴尼古拉·瓦西里耶维奇·果戈理，我们也真心认为我们 是在与他交谈。
-“我们能为您做什么呢?”我们问道，衷心希望能帮助我们如此喜爱的这位 作家。
-“帮帮我!求求你们，别再拖延了!可怕的火焰，硫磺，受难 ...... 啊，受不 了了，你们帮帮我 ...... ”
-“怎么帮?我们怎么帮您呢?!”
-“你们真想救我?你们准备好了?” “是的，是的，准备好了!”我们热烈地回应，“可我们该怎么做呢?您是在
-另一个世界啊。” 那魂灵迟疑片刻，然后小心翼翼地答道 :
-“好小伙子们!如果你们真的怜悯我这个受难者 ...... ”“当然!您只要告诉我们该怎么做。”
-“啊，如果这样! ...... 那我 ...... 那我就给你们 ...... 一点毒药 ...... ”
-在理解了这句话的意思后，我们目瞪口呆。我们相互对视，即便在暗淡的 烛光下我们也能发现，我们大家均面如死灰。我们推倒椅子，慌不择路地逃出 房间。
+待缓过神来，我说道 : “不错。要帮助他，我们首先就得和他一样。也就是说 ...... 首先得死去!” “我全明白了，”萨沙·奥尔科夫吓得牙齿直打颤，他说道，“他是想让我
+们 ...... 自杀。” “我想，我要是现在回房间去，就能看到桌上有个药片，”吓得脸色发青的
+伊万·洛希林接着说，“我知道我一定得把那药片吞下去。要不就从窗口跳下 去 ...... 他们会强迫我们这样做的。”
+我们彻夜难眠，第二天一早便去往邻近的齐赫文圣母像教堂。除了去教堂， 我们不知该往何处寻求建议和帮助。
+救主 ...... 这个称谓由于使用频繁，甚至对于基督徒而言也时常失去了其初 始含义。可此刻，“救主”对于我们而言却成为一个最想听到的最为重要的词。 我们深知，无论这听起来多么富有幻想色彩，我们未知的某些强大力量已对我们 显灵，而只有上帝不受这些力量左右。
+我们担心，在教堂里人们会笑话我们和我们的“果戈理”，可年轻的神父弗 拉基米尔·楚维京却十分严肃地肯定了我们最坏的担心。他解释道，我们与之交 往的自然不是果戈理，不是苏格拉底，而是地地道道的恶魔。我得承认，此话在 我们听来十分刺耳。但我们立时意识到，我们听到的是真话。
+神父确凿地说，此等神秘活动是一项重罪。他强烈建议我们中尚未受洗的人 立即准备参加圣礼，接受洗礼，其余的人则去忏悔，接受圣餐。
+可我们再次耽搁下来，虽然自那天起我们便放弃了先前的实验。我们开始准 备毕业考试，为毕业证书而忙碌，制定未来的规划，又过起自由自在的大学生生活 ...... 我每天阅读《福音书》，这渐渐成为我的真正需要。《福音书》成为唯一 良药，能够祛除那些压抑心灵、不时涌起的郁闷和绝望。
+直到一年之后我才彻底意识到，没有上帝的生活，于我而言不再具有任何 意义。
+为我施洗的是杰出的神父阿列克西·佐托夫，施洗地点是库兹涅茨基区尼古 拉教堂。与我一同受洗的有十几个婴儿和几位成人。婴儿大哭大闹，神父的祷告 含混不清，我在一个半小时时间里什么也没听清。
+我的教母是这家教堂的清洁工，她对我说 : “你会有几天非常幸福的日子，要好好珍惜。” “什么叫幸福的日子?”我问道。 “上帝离你很近。请你为我祷告吧。你刚刚受洗，你的祷告会很灵的。” “怎么祷告?”我又问。 “你自己会知道的，”教母说，“你有机会的话，一定要去普斯科夫洞穴修道
+院。那儿有位约翰长老，名叫克列斯奇扬金。你最好与他见见面。他能解释一 切，能回答你的问题。但你要去修道院的话，也别马上去，十天之后再去。”
+“好的，我等一等。”我说道。 我走出教堂，立时获得某种奇特感觉，甚至连那残存的彷徨和郁闷也顿时烟
+消云散。可我并未太久沉湎于新感受，而是决定去与我当时最亲近的人分享我的 喜悦，此人即我们的大学老师、杰出的剧作家叶夫盖尼·亚历山大罗维奇·格里 高利耶夫。我们在他的创作研修班学习，他是我们全班同学的偶像。他住在莫斯 科郊外的别里亚耶沃地铁站附近。我不知他是否在家(当年电话还不是家家都 有)，便决定去碰碰运气。
+在他那套一居室住宅的门前，我久久按着门铃，却无人应答，叶夫盖尼·亚 历山大罗维奇不在家。我十分沮丧，返身缓缓往地铁站走去。突然，我想起教母 对我所言的“幸福祷告”。我于是停下脚步，仰头朝天，说道 :
+“耶稣基督，上帝啊，我今天受洗信仰了你!我此刻在世上的最大愿望就是见到我的老师叶夫盖尼·亚历山大罗维奇·格里高利耶夫。我知道不应该为这些 琐事惊扰你。但是如果可以，就请你让我们今天见面吧。”
+我怀着碰见叶夫盖尼·亚历山大罗维奇的坚定希望走进地铁站，开始等待自 市中心驶来的列车。当乘客们纷纷走出车厢，我便开始在人流中紧张搜寻我的老 师。突然，有人拍了拍我的肩膀。此人正是叶夫盖尼·亚历山大罗维奇。
+“你瞪着一双大眼在找谁呢?”我至今还记得他当时的话。 “找您。”我丝毫不觉得惊讶地回答。 “那我们走吧。”叶夫盖尼·亚历山大罗维奇说。
+我们来到他家里。
+我对他说了那天发生在我生活中的大事。叶夫盖尼·亚历山大罗维奇仔细倾 听。他当时尚未受洗，但他心怀敬意地接受我的选择。他询问圣礼中的某些细 节。之后，他才问我为何作出这一决定。
+“因为上帝存在，”我答道，“我对此深信不疑。教会里的一切都是对的。”
+“你这么认为? ...... ”格里高利耶夫有些疑惑地说，“你知道吗，那里有很 多 ...... 也不都一样。”
+“也许。但是那里有最重要的东西。” “也许。”叶夫盖尼·亚历山大罗维奇说。
+我们去商店买了一瓶首都牌伏特加酒、两包香烟和一些吃的东西，我在他那 里一直坐到晚上，讨论一部新电影脚本。
+回到住处后，我想起地铁里发生的事，想起我的祷告，想起我在祷告之后立 刻见到了叶夫盖尼·亚历山大罗维奇。“是巧合吗?”我问自己，“很难说清。但 诸多事件间的联系的确存在，虽说生活中一切皆有可能。可另一方面，此类事情 我此前却从未有过 ...... 应当深入思考。”
+第二天，听从教母的建议，我买了一张火车票，前往普斯科夫洞穴修道院。在洞穴修道院
+将近清晨五点，从莫斯科开往塔林的列车抵达普斯科夫州洞穴城车站。坐在 老旧的公共汽车上沿着颠簸的道路前往修道院，我打量着俄国西陲这座整洁得令 人诧异的小城，路边是楼层不高、带有尖塔的漂亮房子，房前屋后有精致的花 园。洞穴城距爱沙尼亚国境线仅五公里。十月革命后至 1940 年，小城曾属爱沙 尼亚，修道院因此得以保全，此地的生活方式因此亦未发生巨变。
+我与来自莫斯科的其他乘客一同行至修道院厚实的院墙下。修道院尚未开 门，只得等待守门人在规定时刻打开那两扇裹着铁皮的古老大门。
+修道院内部出乎意料的舒适漂亮，让人不禁欣赏起来。这里的一切虽为现 实，却近乎童话，令人赞叹。我沿着鹅卵石铺就的路走向修道院广场，沿途观赏 色彩斑斓的修道院建筑和随处可见的玫瑰盛开的花坛。这里的多处教堂，是我平 生所见最为舒心、最为亲切的教堂。
+修道院的主教堂是圣母安息节教堂，其内部光线很暗。当我进入教堂，两位 身着黑色拖地长袍、头发扎成发辫的见习修士点燃神灯。刷成白色的低矮天花板 混沌地反射着神灯溢出的光。缀有古老金饰的圣像面孔专注地注视着我。
+身着长袍、头戴筒帽的修士们陆续走进教堂。俗家人也鱼贯而入。礼拜开始 了，我觉得礼拜转瞬即逝。当我获悉下一场礼拜很快即将举行，主教亦将出席， 我便赶往坐落在高冈上的米哈伊尔教堂，又参加一场礼拜。
+一切均让我感觉震撼 :长发披散、肩背漂亮圣带的助祭们，神色威严的院 长，年长或年轻的神父们，他们的神情迥异于俗家人。主教身材高大，年岁已 高，他身着古老法衣，神色庄重智慧，十分和善。持续很久的礼拜结束后，修士们排成两列，整齐地唱着歌，庄重地走向餐 厅。我来到修道院的院子里，向朝圣者们询问如何才能留在修道院。人们告诉 我，该去找监督司祭。我首次听说这一单词，我反复念叨，以便记住这个词。当 修士们步出餐厅，我便挨个儿问他们谁是监督司祭。
+“监督司祭现在在主教那里，但你可以去见他的助手，也就是帕拉吉神父或 者伊里涅神父。”有人对我说。
+我立时意识到，我永远记不住这些名字。一位修士同情我，将我送至监督司 祭的助手那里，助手又领我去了接待朝圣者的修道小室。最初十天杂役
+我被领入的宿舍位于修道院院长住处的首层，院长的居室就在我们楼上。有 人告诉我，隔壁住的是严肃的修道院司库，名叫纳法纳伊尔神父。我暗自思忖， 这些修士的名字若不如此难记就好了。幸运的是，我在这里要见的神父，其名字 倒不甚奇怪，他叫约翰神父。
+宽敞明亮的宿舍摆有十来张床，几座雕花的老式木橱，还有若干床头柜，这 便是供人休息或过夜的场所。住进这儿的人身份不同，来自全国各地，但能看 出，他们之间的关系十分友善亲切。
+有人告诉我，早晚大家均去做礼拜，白天则做杂役。做哪些杂役，且听吩 咐。或是劈柴，或是帮厨，或整理粮库，或清扫道路。
+傍晚我们去做礼拜。此番礼拜，我不知为何感觉很难熬。礼拜似乎没完没 了，居然持续四个多小时，令我大为诧异。不过，我打量一番挤满教堂的信众。 他们大多为中老年的普通妇人，男人较少。但也有许多年轻人在祷告，至少，较 之莫斯科的教堂，此处更多年轻人。当然，还有香客和圣愚，他们构成了俄国修 道院及其附近城镇无与伦比的神韵。
+礼拜后大家去吃晚餐。前来就餐的修士仅五人，有人告诉我，其余修士一日 仅进餐一次或两次，因此，在餐厅里就餐的多为做杂役的见习修士和朝圣者。餐 厅的食物并不精致，但十分可口。有一位修士在现场高声诵读圣徒传。神情严肃 的修道院司库纳法纳伊尔神父与大家同在餐厅。他当年约六十五岁。他身材瘦 削，白发苍苍，他并不吃东西，只盯着那位诵读的修士，当那修士读错某个重音 或某个古代拜占庭人名时，神父便发声纠正。
+晚餐结束时，众人均原地不动，再次开始祷告，此为晚祷。之后，众人轻声唱起一首悦耳古曲，并逐一贴吻司祭手握的十字架。 步出餐厅，我首次看见夜色中的修道院。它美轮美奂。路灯映亮小道和树
+冠。建筑物上亦有灯光闪烁。这一切使得修道院之夜未有恐怖，反而愈显神奇安 宁。我不愿回屋，可有人对我说，夜间不能在修道院里闲逛。再说，明日还得早 起。在了解到早起的时间后，我几乎崩溃 :必须在清晨五点三十分起床!之前在 家，我从未醒得如此之早。
+果然，五点半钟，响亮的钟声把我惊醒。“我们的主耶稣基督，我们以圣徒 的名义祈祷，请宽恕我们!”负责叫醒众人的修士推开我们宿舍的门，用睡意惺 忪的声音念完这句祷告，然后奔向下一个房间去唤醒其他人。
+起得如此之早，在一间大洗漱室里用冰冷的凉水刷牙，这实在让人难受。我 已上百次地后悔，觉得不该来此地，更恐怖的是，我还许诺上帝要在这里待上整 整十天。有谁需要我们这样早起呢?是上帝吗?当然不是!是我们自己吗?也不 是。人们在自己折磨自己! ......
+外面仍一片漆黑。修士们身着随风摆动的黑色教袍，沿着弯弯曲曲的台阶 上行，一声不响地走向山冈上的米哈伊尔教堂。我们这些朝圣者，紧跟在他们 身后。
+在神灯和烛光的映照下，兄弟祷告开始了。众人皆祈求上帝、圣母和修道院 的护佑者圣科尔尼利祝福即将开始的一天。人们在神奇圣像旁的神灯上点燃蜡 烛，再将点燃的蜡烛置于老式马灯中，并立即送往修道院厨房，以便引燃炉火。 兄弟祷告之后，众人倾听晨祷，阅读朝圣者们写下的祈求亲人健康安宁的字条。 最后，包括我在内的不再继续参加礼拜的人便赶去吃早餐。
+看到供给朝圣者们的食物，我情绪高涨。有在莫斯科并不常见的鱼，有腌蘑 菇、西葫芦、浓稠的荞麦粥和燕麦粥，粥上还撒有炸焦的洋葱末。总之，一切管 够。我后来获悉，洞穴修道院向来热心款待干重活的人。这一传统源自前任院长 阿里皮神父管事时期，现今的大司祭加夫里尔保留了这一做法。
+修士们与见习修士们在早餐时友好交谈，时而也玩笑几句。我很喜欢这场景，我在俗世很少目睹到如此宁静的善意。 八点钟，我们这些朝圣者在管理处的院子里集合。担任队长(修道院里也采
+用苏维埃称谓)的马克西姆神父做了简单的祷告后开始布置任务。他对我的指派 简单明了 :“你去打扫卫生。”我不知道要“打扫”什么，待我得知实情后，我 不禁火冒三丈，差点儿转身彻底离开修道院。我的任务是清理污水井。我竭力控 制住自己，强迫自己穿上别人递来的肮脏衣服和靴子，准备爬进污水井。
+我将不再详细描写这一天。我在臭气熏天的坑洞里一直干到傍晚五点，掏出 混有一半泥沙的污物，装进木桶。
+在爬出污水井喘口气的时候，我时而看到几位修士，我觉得他们似乎在修道 院里悠闲地散步，于是我便想起我们听过的无神论课，想起那些说法，称这些身 着教袍的剥削者道貌岸然、虚情假意，一直在压迫心地单纯的普通民众。在这种 情况下，他们压迫的就是我。
+我当时并不清楚，其实每位修士均有许多事情要做，修士们的生活只有两项 内容，即劳作和祷告。但外人对此有所不知。修士们的工作场所有铁匠铺、木工 房、面包房、图书馆和圣饼作坊。执事要清扫祭坛，清理祭服和圣器，准备礼拜 必需的一切物件有人去采买，为数百名出家人和俗家人准备斋饭，另有人在花 园、田地和蔬菜库房里劳作，不一而足。而且众人还得参加一日数小时的祈祷仪 式，修士们更要听人忏悔，有时直到深夜，还得履行众多其他职责。可是，当你 置身污水深坑，你眼前的世界便显得阴暗而不公。
+晚间我再次参加礼拜，读着一位老修士塞给我的那些松松垮垮的追荐簿和祈 祷簿上无休无止的名字。祈求健康，祈求安宁 ...... 祈求健康，祈求安宁 ...... 伊 万，阿格里皮娜，彼得，娜杰日达，患病的叶卡捷琳娜，怀孕的安娜，出门的尼 古拉，他们活生生地在我眼前一一走过。我感觉到自己的责任，便不仅仅念出名 字，还尽我所能为他们祷告。仅在一处我感觉好笑:我读到一张字条，是一位老 太太的笔迹，她祈求保佑“浪子格里高利”健康，我觉得自己就是那位让自己不 幸的奶奶陷入绝望的浪子。我多想回家啊!这无意义的劳作还有八天!我却始终无法谋面约翰神父，更 别说与他讨论我的问题。
+次日，我被分派去劈柴，再把劈好的木柴堆成巨大的柴垛，在管理处的院子 里，这些柴垛宛如一座座奇特的多层小木屋。我此前从未清理过污水井，从未劈 过柴，从未放过牛，从未清扫过卵石路面。因此，当我在修道院的十天逗留即将 结束时，我感受甚多，兴奋和疲惫亦甚多。这种“异样感受”在我内心留存了 许久。
 </div>
 
 
