--- a/index.html
+++ b/index.html
@@ -48,59 +48,106 @@
 
 <div class="a">
 <p style="text-align:center;">
-待缓过神来，我说道 : “不错。要帮助他，我们首先就得和他一样。也就是说 ...... 首先得死去!” “我全明白了，”萨沙·奥尔科夫吓得牙齿直打颤，他说道，“他是想让我
-们 ...... 自杀。” “我想，我要是现在回房间去，就能看到桌上有个药片，”吓得脸色发青的
-伊万·洛希林接着说，“我知道我一定得把那药片吞下去。要不就从窗口跳下 去 ...... 他们会强迫我们这样做的。”
-我们彻夜难眠，第二天一早便去往邻近的齐赫文圣母像教堂。除了去教堂， 我们不知该往何处寻求建议和帮助。
-救主 ...... 这个称谓由于使用频繁，甚至对于基督徒而言也时常失去了其初 始含义。可此刻，“救主”对于我们而言却成为一个最想听到的最为重要的词。 我们深知，无论这听起来多么富有幻想色彩，我们未知的某些强大力量已对我们 显灵，而只有上帝不受这些力量左右。
-我们担心，在教堂里人们会笑话我们和我们的“果戈理”，可年轻的神父弗 拉基米尔·楚维京却十分严肃地肯定了我们最坏的担心。他解释道，我们与之交 往的自然不是果戈理，不是苏格拉底，而是地地道道的恶魔。我得承认，此话在 我们听来十分刺耳。但我们立时意识到，我们听到的是真话。
-神父确凿地说，此等神秘活动是一项重罪。他强烈建议我们中尚未受洗的人 立即准备参加圣礼，接受洗礼，其余的人则去忏悔，接受圣餐。
-可我们再次耽搁下来，虽然自那天起我们便放弃了先前的实验。我们开始准 备毕业考试，为毕业证书而忙碌，制定未来的规划，又过起自由自在的大学生生活 ...... 我每天阅读《福音书》，这渐渐成为我的真正需要。《福音书》成为唯一 良药，能够祛除那些压抑心灵、不时涌起的郁闷和绝望。
-直到一年之后我才彻底意识到，没有上帝的生活，于我而言不再具有任何 意义。
-为我施洗的是杰出的神父阿列克西·佐托夫，施洗地点是库兹涅茨基区尼古 拉教堂。与我一同受洗的有十几个婴儿和几位成人。婴儿大哭大闹，神父的祷告 含混不清，我在一个半小时时间里什么也没听清。
-我的教母是这家教堂的清洁工，她对我说 : “你会有几天非常幸福的日子，要好好珍惜。” “什么叫幸福的日子?”我问道。 “上帝离你很近。请你为我祷告吧。你刚刚受洗，你的祷告会很灵的。” “怎么祷告?”我又问。 “你自己会知道的，”教母说，“你有机会的话，一定要去普斯科夫洞穴修道
-院。那儿有位约翰长老，名叫克列斯奇扬金。你最好与他见见面。他能解释一 切，能回答你的问题。但你要去修道院的话，也别马上去，十天之后再去。”
-“好的，我等一等。”我说道。 我走出教堂，立时获得某种奇特感觉，甚至连那残存的彷徨和郁闷也顿时烟
-消云散。可我并未太久沉湎于新感受，而是决定去与我当时最亲近的人分享我的 喜悦，此人即我们的大学老师、杰出的剧作家叶夫盖尼·亚历山大罗维奇·格里 高利耶夫。我们在他的创作研修班学习，他是我们全班同学的偶像。他住在莫斯 科郊外的别里亚耶沃地铁站附近。我不知他是否在家(当年电话还不是家家都 有)，便决定去碰碰运气。
-在他那套一居室住宅的门前，我久久按着门铃，却无人应答，叶夫盖尼·亚 历山大罗维奇不在家。我十分沮丧，返身缓缓往地铁站走去。突然，我想起教母 对我所言的“幸福祷告”。我于是停下脚步，仰头朝天，说道 :
-“耶稣基督，上帝啊，我今天受洗信仰了你!我此刻在世上的最大愿望就是见到我的老师叶夫盖尼·亚历山大罗维奇·格里高利耶夫。我知道不应该为这些 琐事惊扰你。但是如果可以，就请你让我们今天见面吧。”
-我怀着碰见叶夫盖尼·亚历山大罗维奇的坚定希望走进地铁站，开始等待自 市中心驶来的列车。当乘客们纷纷走出车厢，我便开始在人流中紧张搜寻我的老 师。突然，有人拍了拍我的肩膀。此人正是叶夫盖尼·亚历山大罗维奇。
-“你瞪着一双大眼在找谁呢?”我至今还记得他当时的话。 “找您。”我丝毫不觉得惊讶地回答。 “那我们走吧。”叶夫盖尼·亚历山大罗维奇说。
-我们来到他家里。
-我对他说了那天发生在我生活中的大事。叶夫盖尼·亚历山大罗维奇仔细倾 听。他当时尚未受洗，但他心怀敬意地接受我的选择。他询问圣礼中的某些细 节。之后，他才问我为何作出这一决定。
-“因为上帝存在，”我答道，“我对此深信不疑。教会里的一切都是对的。”
-“你这么认为? ...... ”格里高利耶夫有些疑惑地说，“你知道吗，那里有很 多 ...... 也不都一样。”
-“也许。但是那里有最重要的东西。” “也许。”叶夫盖尼·亚历山大罗维奇说。
-我们去商店买了一瓶首都牌伏特加酒、两包香烟和一些吃的东西，我在他那 里一直坐到晚上，讨论一部新电影脚本。
-回到住处后，我想起地铁里发生的事，想起我的祷告，想起我在祷告之后立 刻见到了叶夫盖尼·亚历山大罗维奇。“是巧合吗?”我问自己，“很难说清。但 诸多事件间的联系的确存在，虽说生活中一切皆有可能。可另一方面，此类事情 我此前却从未有过 ...... 应当深入思考。”
-第二天，听从教母的建议，我买了一张火车票，前往普斯科夫洞穴修道院。在洞穴修道院
-将近清晨五点，从莫斯科开往塔林的列车抵达普斯科夫州洞穴城车站。坐在 老旧的公共汽车上沿着颠簸的道路前往修道院，我打量着俄国西陲这座整洁得令 人诧异的小城，路边是楼层不高、带有尖塔的漂亮房子，房前屋后有精致的花 园。洞穴城距爱沙尼亚国境线仅五公里。十月革命后至 1940 年，小城曾属爱沙 尼亚，修道院因此得以保全，此地的生活方式因此亦未发生巨变。
-我与来自莫斯科的其他乘客一同行至修道院厚实的院墙下。修道院尚未开 门，只得等待守门人在规定时刻打开那两扇裹着铁皮的古老大门。
-修道院内部出乎意料的舒适漂亮，让人不禁欣赏起来。这里的一切虽为现 实，却近乎童话，令人赞叹。我沿着鹅卵石铺就的路走向修道院广场，沿途观赏 色彩斑斓的修道院建筑和随处可见的玫瑰盛开的花坛。这里的多处教堂，是我平 生所见最为舒心、最为亲切的教堂。
-修道院的主教堂是圣母安息节教堂，其内部光线很暗。当我进入教堂，两位 身着黑色拖地长袍、头发扎成发辫的见习修士点燃神灯。刷成白色的低矮天花板 混沌地反射着神灯溢出的光。缀有古老金饰的圣像面孔专注地注视着我。
-身着长袍、头戴筒帽的修士们陆续走进教堂。俗家人也鱼贯而入。礼拜开始 了，我觉得礼拜转瞬即逝。当我获悉下一场礼拜很快即将举行，主教亦将出席， 我便赶往坐落在高冈上的米哈伊尔教堂，又参加一场礼拜。
-一切均让我感觉震撼 :长发披散、肩背漂亮圣带的助祭们，神色威严的院 长，年长或年轻的神父们，他们的神情迥异于俗家人。主教身材高大，年岁已 高，他身着古老法衣，神色庄重智慧，十分和善。持续很久的礼拜结束后，修士们排成两列，整齐地唱着歌，庄重地走向餐 厅。我来到修道院的院子里，向朝圣者们询问如何才能留在修道院。人们告诉 我，该去找监督司祭。我首次听说这一单词，我反复念叨，以便记住这个词。当 修士们步出餐厅，我便挨个儿问他们谁是监督司祭。
-“监督司祭现在在主教那里，但你可以去见他的助手，也就是帕拉吉神父或 者伊里涅神父。”有人对我说。
-我立时意识到，我永远记不住这些名字。一位修士同情我，将我送至监督司 祭的助手那里，助手又领我去了接待朝圣者的修道小室。最初十天杂役
-我被领入的宿舍位于修道院院长住处的首层，院长的居室就在我们楼上。有 人告诉我，隔壁住的是严肃的修道院司库，名叫纳法纳伊尔神父。我暗自思忖， 这些修士的名字若不如此难记就好了。幸运的是，我在这里要见的神父，其名字 倒不甚奇怪，他叫约翰神父。
-宽敞明亮的宿舍摆有十来张床，几座雕花的老式木橱，还有若干床头柜，这 便是供人休息或过夜的场所。住进这儿的人身份不同，来自全国各地，但能看 出，他们之间的关系十分友善亲切。
-有人告诉我，早晚大家均去做礼拜，白天则做杂役。做哪些杂役，且听吩 咐。或是劈柴，或是帮厨，或整理粮库，或清扫道路。
-傍晚我们去做礼拜。此番礼拜，我不知为何感觉很难熬。礼拜似乎没完没 了，居然持续四个多小时，令我大为诧异。不过，我打量一番挤满教堂的信众。 他们大多为中老年的普通妇人，男人较少。但也有许多年轻人在祷告，至少，较 之莫斯科的教堂，此处更多年轻人。当然，还有香客和圣愚，他们构成了俄国修 道院及其附近城镇无与伦比的神韵。
-礼拜后大家去吃晚餐。前来就餐的修士仅五人，有人告诉我，其余修士一日 仅进餐一次或两次，因此，在餐厅里就餐的多为做杂役的见习修士和朝圣者。餐 厅的食物并不精致，但十分可口。有一位修士在现场高声诵读圣徒传。神情严肃 的修道院司库纳法纳伊尔神父与大家同在餐厅。他当年约六十五岁。他身材瘦 削，白发苍苍，他并不吃东西，只盯着那位诵读的修士，当那修士读错某个重音 或某个古代拜占庭人名时，神父便发声纠正。
-晚餐结束时，众人均原地不动，再次开始祷告，此为晚祷。之后，众人轻声唱起一首悦耳古曲，并逐一贴吻司祭手握的十字架。 步出餐厅，我首次看见夜色中的修道院。它美轮美奂。路灯映亮小道和树
-冠。建筑物上亦有灯光闪烁。这一切使得修道院之夜未有恐怖，反而愈显神奇安 宁。我不愿回屋，可有人对我说，夜间不能在修道院里闲逛。再说，明日还得早 起。在了解到早起的时间后，我几乎崩溃 :必须在清晨五点三十分起床!之前在 家，我从未醒得如此之早。
-果然，五点半钟，响亮的钟声把我惊醒。“我们的主耶稣基督，我们以圣徒 的名义祈祷，请宽恕我们!”负责叫醒众人的修士推开我们宿舍的门，用睡意惺 忪的声音念完这句祷告，然后奔向下一个房间去唤醒其他人。
-起得如此之早，在一间大洗漱室里用冰冷的凉水刷牙，这实在让人难受。我 已上百次地后悔，觉得不该来此地，更恐怖的是，我还许诺上帝要在这里待上整 整十天。有谁需要我们这样早起呢?是上帝吗?当然不是!是我们自己吗?也不 是。人们在自己折磨自己! ......
-外面仍一片漆黑。修士们身着随风摆动的黑色教袍，沿着弯弯曲曲的台阶 上行，一声不响地走向山冈上的米哈伊尔教堂。我们这些朝圣者，紧跟在他们 身后。
-在神灯和烛光的映照下，兄弟祷告开始了。众人皆祈求上帝、圣母和修道院 的护佑者圣科尔尼利祝福即将开始的一天。人们在神奇圣像旁的神灯上点燃蜡 烛，再将点燃的蜡烛置于老式马灯中，并立即送往修道院厨房，以便引燃炉火。 兄弟祷告之后，众人倾听晨祷，阅读朝圣者们写下的祈求亲人健康安宁的字条。 最后，包括我在内的不再继续参加礼拜的人便赶去吃早餐。
-看到供给朝圣者们的食物，我情绪高涨。有在莫斯科并不常见的鱼，有腌蘑 菇、西葫芦、浓稠的荞麦粥和燕麦粥，粥上还撒有炸焦的洋葱末。总之，一切管 够。我后来获悉，洞穴修道院向来热心款待干重活的人。这一传统源自前任院长 阿里皮神父管事时期，现今的大司祭加夫里尔保留了这一做法。
-修士们与见习修士们在早餐时友好交谈，时而也玩笑几句。我很喜欢这场景，我在俗世很少目睹到如此宁静的善意。 八点钟，我们这些朝圣者在管理处的院子里集合。担任队长(修道院里也采
-用苏维埃称谓)的马克西姆神父做了简单的祷告后开始布置任务。他对我的指派 简单明了 :“你去打扫卫生。”我不知道要“打扫”什么，待我得知实情后，我 不禁火冒三丈，差点儿转身彻底离开修道院。我的任务是清理污水井。我竭力控 制住自己，强迫自己穿上别人递来的肮脏衣服和靴子，准备爬进污水井。
-我将不再详细描写这一天。我在臭气熏天的坑洞里一直干到傍晚五点，掏出 混有一半泥沙的污物，装进木桶。
-在爬出污水井喘口气的时候，我时而看到几位修士，我觉得他们似乎在修道 院里悠闲地散步，于是我便想起我们听过的无神论课，想起那些说法，称这些身 着教袍的剥削者道貌岸然、虚情假意，一直在压迫心地单纯的普通民众。在这种 情况下，他们压迫的就是我。
-我当时并不清楚，其实每位修士均有许多事情要做，修士们的生活只有两项 内容，即劳作和祷告。但外人对此有所不知。修士们的工作场所有铁匠铺、木工 房、面包房、图书馆和圣饼作坊。执事要清扫祭坛，清理祭服和圣器，准备礼拜 必需的一切物件有人去采买，为数百名出家人和俗家人准备斋饭，另有人在花 园、田地和蔬菜库房里劳作，不一而足。而且众人还得参加一日数小时的祈祷仪 式，修士们更要听人忏悔，有时直到深夜，还得履行众多其他职责。可是，当你 置身污水深坑，你眼前的世界便显得阴暗而不公。
-晚间我再次参加礼拜，读着一位老修士塞给我的那些松松垮垮的追荐簿和祈 祷簿上无休无止的名字。祈求健康，祈求安宁 ...... 祈求健康，祈求安宁 ...... 伊 万，阿格里皮娜，彼得，娜杰日达，患病的叶卡捷琳娜，怀孕的安娜，出门的尼 古拉，他们活生生地在我眼前一一走过。我感觉到自己的责任，便不仅仅念出名 字，还尽我所能为他们祷告。仅在一处我感觉好笑:我读到一张字条，是一位老 太太的笔迹，她祈求保佑“浪子格里高利”健康，我觉得自己就是那位让自己不 幸的奶奶陷入绝望的浪子。我多想回家啊!这无意义的劳作还有八天!我却始终无法谋面约翰神父，更 别说与他讨论我的问题。
-次日，我被分派去劈柴，再把劈好的木柴堆成巨大的柴垛，在管理处的院子 里，这些柴垛宛如一座座奇特的多层小木屋。我此前从未清理过污水井，从未劈 过柴，从未放过牛，从未清扫过卵石路面。因此，当我在修道院的十天逗留即将 结束时，我感受甚多，兴奋和疲惫亦甚多。这种“异样感受”在我内心留存了 许久。
+但我毕竟看到了一个令我惊讶的陌生世界。我数次路遇约翰神父，与他交谈 数分钟。我当时觉得他是个普通老人，他当然很善良，但过于普通，没什么意 思。我向他提出的问题看来十分愚蠢，可约翰神父始终倾听着，由于他自己没有 时间，便建议我去找塔夫里昂院长。我当时悲哀地发现我很难记住这个名字。但 对于我当时特别关心的问题，即是否该学电影，教会怎么看待电影，约翰神父的 回答却令人意外 :
+“电影是一种语言。可以用这种语言大喊 :‘把他钉上十字架!’也可以用这 种语言颂扬上帝。”
+我立时记住此话，觉得这个“老头子”并不那么普通 ......
+我当时如何能知道，此人将决定我的整个命运，成为我一生的主要发现之 一，对我而言，他永远是基督徒、修士和神父的范例。
+这位老人在道别时热情拥抱我，为我祝福，并嘱咐我一定再来修道院，我却 对这一可能性顿生疑惑，我当时觉得，洞穴修道院来一次便已足够。
+离开修道院的前一天，我终于费力地想起约翰神父建议我去见的那位修士的 名字，即塔夫里昂院长，我找到了他。这是一位身材不高、四十岁左右的修士， 接受过高等教育(我这才理解约翰神父的用意，因为在当时的情况下，我需要
+“智慧的交谈”)。塔夫里昂神父对我很迁就。他认真回答我提出的众多问题，在 交谈的最后建议我阅读《圣经》和古代教父们的著作，早晚依据祈祷书祈祷，经 常忏悔，领受圣餐，更重要的是要找一位教父。塔夫里昂送我一本收有圣诗的祈祷书，此书在当时十分珍贵。他也邀请我再来修道院。 我熬过这整整十天，熬过这些早起、杂役、无休止的礼拜，以及礼拜时在我
+耳边不时狂吼的怪人。我不能说我在怜惜失去的时间，可到最后一天我早已归心 似箭，想回莫斯科。
+人们对我热情相送。遵照院长安排，司库送我整整三十卢布作为路费。我还 接过一个装满各种美食的袋子。我前去教堂祷告，心生几丝感激和别愁，可在步 出修道院时却充满即将返回莫斯科的喜悦。
+可是突然，我心头却遭到重重一击。在这十来天里我首度步出修道院大门， 可我心生的最初感觉却是一个难以遏制的愿望，即扔掉袋子往回跑!我无论如何 没想到自己会有这一念头! ...... 我竭力克制自己，缓步走向汽车站，越来越强 烈地意识到自己已步入与十天前的世界完全不同的另一世界。此时是傍晚。街上走着寻常的人们。迎面过来一个胖胖的小伙子，他边走边 吃，嚼着馅饼，啃着苹果。我记得，这普普通通的场景让我大为恐惧。我不知原 因何在。最终我想明白了，这些天里我已习惯在吃食物前祷告上帝，这边走边吃 东西的人于是便让我觉得有些不可思议。
+一群青年走出电影院。有人哈哈大笑。一对对情侣相拥着从我身边走过。一 切都很正常。仅有一点，即我不知为何觉得自己在此完全是个外人。
+与我同乘一个包厢的是两位姑娘和一位与我年纪相仿的青年。我爬到上铺， 他们此时却掏出食物和葡萄酒。他们显然做好了快乐旅行的准备，他们也力邀我 加入。十天前，我或许会毫不迟疑地加入进去，与他们欢度时光。可此时，我却 含混地回答一声，便躲在上铺的角落里，一路上始终在阅读塔夫里昂神父赠我的 祈祷书上那些我不明就里的斯拉夫词汇，耳边是三位旅伴欢乐的责怪和要我下 往罪孽尘世的召唤。不，我对这三位年轻人没有丝毫谴责，我的上帝，我也并 不认为自己是圣徒，而他们是罪人。我甚至丝毫没有此类想法。只不过，一切都 变了。在莫斯科
+的确，一切都变了。我不知究竟发生了什么，但世界对我而言已失去一切兴 致和诱惑。昨日还热衷的事情，如今即便不是毫无意义(我不敢滥用此词)，但 也显得十分遥远。我认不出自己。友人们也认不出我。
+回到莫斯科后，我突然惊讶地发现，这十来天里我不仅没有抽烟，甚至将这 一多年养成的习惯忘得一干二净，以前，我通常一天至少要抽两包烟。
+我自己感觉良好的唯一去处即教堂。友人，娱乐，从前热衷的工作，均难以 让我动心。甚至连书籍，连我爱读的陀思妥耶夫斯基和托尔斯泰的书，也无法再 激起我的关注。我知道自己发生了巨大变化。或许，先前我感觉亲切的世界已一 去不返。眼前展现出另一种生活，与其相比，我先前度过的二十四年生活均不值 一提。我真心挚爱从前那个世界，怜惜它，与它心心相印! ...... 可我的心已不 再属于旧的约定，而转向突然呈现的新约定，即人与上帝之间不可遏制的秘密 约定。
+遵循塔夫里昂神父的建议，我翻开古代教父们的著作。他们的著作让我深感 震惊。最令人遗憾的是，我们拥有这座无与伦比的宝库，却竟然对它一无所知。 我眼前展现出一片由伟大作者们构成的新大陆，他们在数百年间积累起对生
+活的认知体验，这些体验有别于优秀哲学家们和经典作家们的看法。以撒·西 林，约翰·列斯特维奇尼克，多罗费神父，金口约翰，我们的伊格纳吉(勃里扬 恰尼诺夫)和隐修者费奥凡，吉洪·扎东斯基，所有这些神学伟人都是我们本该 继承的遗产，却被我们长期忽视。
+一个月之后，我已能理解教堂的礼拜，能领会那些教会斯拉夫语词汇深刻丰 富的含义。早晚的祈祷成为渴求的时刻，圣餐和忏悔成为必需。不久，我再次前往洞穴修道院。此后，只要情况许可，我便抽身前去洞穴修 道院。电影让我感觉索然无味，我想这对电影而言亦并非太大损失。平心而论， 我只是在积攒大学毕业所需的学时。我的大学老师们见状颇感惋惜，可他们很快 便明白他们也无能为力。做完摄影棚里的例行工作后，我有两周空闲时间，于是 便坐上火车，赶往修道院。
+我为何如此向往修道院呢?首先是因为那里的人。我想在此谈谈修道院里的 那些人。约翰神父
+我在 1982 年去普斯科夫洞穴修道院时首次见到约翰大司祭(克列斯奇扬 金)。当时他似乎并未给我留下特殊印象，不过是一位善良老人，他身体结实 (他当时七十二岁)，总是步履匆匆，甚至显得十分忙碌，身边永远围有大批朝
+圣者。修道院里的其他修士则显得更为严肃节制，甚至更为稳重。 晚礼拜前，普斯科夫洞穴修道院宿舍里往往会冲出一个奇特队列。年轻的修 道院管事菲拉列特神父挽着约翰神父的胳膊，拖着他一路小跑，约翰神父勉勉强 强方能跟上管事。在外面等待约翰神父的一群朝圣者，立时跟在他俩身后。他 们与两位神父一起，像一阵风在修道院的院子里卷过。修士斗篷和修士冠随风 飘扬，约翰神父不时磕磕碰碰，跑得气喘吁吁，匆忙之间仍试图为某位朝圣者祝 福，甚至回答问题。菲拉列特神父见状十分生气，扯着刺耳的尖嗓门喊叫，时而 冲着约翰神父，时而冲着朝圣者，时而甚至挥动雨伞驱赶朝圣者。最后，他终于
+把约翰神父塞进教堂，然后动作更快地把他拉上祭坛。 应该说，管事这么做绝非出于恶意，而是担心约翰神父天冷时在外面被冻感
+冒。而在天气暖和时，神父甚至难以抵达教堂，因为人们会一连数小时围住他 不放。
+我和其他见习修士朋友日复一日地目睹这一场景，开怀大笑，直到我们逐渐 意识到，这位跟在修道院管事身后踉跄而行的约翰神父实为人间少有的奇人之 一，对于像他这样的人而言，空间和时间的界限更为开阔，上帝赋予他们更为广 阔的眼界，能看到过去和将来，一如看到现在。我们带着惊讶、不无恐惧地确信 自己的体验，即在这位被不怀好意者戏称为动画片中的“爱波利特大夫”(楚科 夫斯基所作童话中一位给动物治病的和蔼可亲但粗心大意的大夫)的老人面前，人的灵魂会袒露其一切深藏不露的秘密、秘而不宣的愿望和貌似隐蔽的行为和思 想。在古代，这些人被称作先知。在我们东正教会，他们被称作长老。
+约翰神父从不自称长老。听闻此类称谓，他总是害怕地两手一拍 :“哪里是 什么长老?!我们最多也就是有些经历的小老头。”极其谦逊的他，直到临终都 对此深信不疑。然而，熟知约翰神父的许多人却坚信，约翰神父即真正的上帝使 者，他懂得神的意志。
+是的，这一点至关重要!约翰神父洞悉上帝关于人的神圣意志。但我们当时 对此同样未能立时领会。我们起初觉得，这位神父只是个十分智慧的老人。正是 为着这一名声在外的“智慧”，人们自俄国各地赶来见他。只是后来我们才惊讶 地发现，这成千上万的人希望从约翰神父处获得的绝非某一智慧的建议。
+世间不乏能根据人生经历给别人提出各种建议的人。可是，前来拜访约翰神 父的人却往往处于他们命运的悲剧关头或转折关头，他们想从约翰神父处听到的 建议并非关涉如何智慧地做事，而是关涉如何正确地做人。确切地说，这位长老与所有他者的差异正在于此，即对神的意志的认知。他因之有别于那些大名鼎鼎 的智者和知识渊博的神学家，甚至有别于经验丰富的杰出修士。
+我记得，我当年在做见习修士时，曾有一位来自莫斯科的朝圣者走到我身 边，告诉我他亲眼目睹的一个场景。一次，约翰神父像往常一样被许多人环绕， 他走过修道院的院子向教堂赶去，突然，一位恸哭不止的妇人向他扑来，手里抱 着一个两三岁的男孩。
+“神父啊，请祝福这个要做手术的孩子吧!莫斯科的大夫急着给他做手 术......”
+约翰神父停下脚步，对妇人说了两句令这位来自莫斯科的朝圣者大为震惊 的话 :
+“千万别做手术!孩子会死在手术台上。祷告吧，给他治病，但千万别做手 术。他会好起来的。”
+他给男孩画了一个十字。
+我和这位朝圣者坐在一起，我俩因这样的想法而担心 :万一神父误判了呢? 万一孩子死了怎么办?如果发生不幸，孩子的母亲该如何对待约翰神父呢?
+我们当然不会怀疑约翰神父轻视医学，虽说在宗教界的确有极少数人敌视医 学。我们也知道他在给人祝福时，有时也建议被祝福着去做外科手术。他的教子 中就有多位名医。
+我们惶恐地等待结果，悲痛欲绝的母亲会返回修道院，从而引出一桩可怕的 丑闻，还是一切果然恰如约翰神父的预言?眼见神父心平气和，每日照例奔走在 教堂和修道小室之间，我们所能得出的结论只有一条，即长老对自己给出的果断 建议深信不疑。
+信赖和服从，是东正教徒与其教父关系中的首要原则。诚然，并非每位教父 都配得上人们的完全服从。不过，此类教父为数极少。这其实是个复杂问题。有 过此类悲剧，即某些不明事理的神职人员自视为长老，且颐指气使，肆意发号施 令，最终做出宗教生活中绝不允许的事情，即压制教子的自由。约翰神父从不专横，从不把自己的意志强加于他人。他无比珍视人的自由， 对人的自由怀有某种特殊景仰。神父时刻准备去劝说，去开导，甚至准备去央 求，以便他认为对求助者而言必不可少的那些做法得以履行。可是，如若对方坚 持己见，神父通常会叹息一声，说道 :
+“那您就试一试吧。您就按您的想法做吧 ...... ” 据我所知，那些没有按照约翰神父的建议去做的人，最终全都追悔莫及。通
+常，他们会再度来到神父面前，满怀按照神父所言行事的坚定愿望。而神父一如 既往地带着同情和爱意接待这些人，不惜花费时间和精力，尽其所能地矫正他们 的错误。
+这个关涉男孩和手术的故事，令我想起一件发生在十年前的相似事件，可这 件事的结局却大相径庭。
+当时，在莫斯科生活着一位非常独特有趣的妇人，即瓦连金娜·帕夫洛夫 娜·科诺瓦洛娃。她就像俄国画家库斯托季耶夫画中的人物，是地道的莫斯科女 商人。她是一位六十来岁的寡妇，是和平大街上一家大型食品基地的主任。瓦 连金娜·帕夫洛夫娜身材肥胖矮小，通常都端庄地坐在她办公室里宽大的办公桌 后面。即便在苏联动乱时期，她办公室的四壁也挂满装有纸质圣像画复制品的巨 大镜框，办公桌下方的地板上摆有一个巨大的塑料口袋，里面装满了钱。瓦连金 娜·帕夫洛夫娜根据自己的需要处理这些钱，时而让手下去购买一批新鲜菜蔬， 时而把钱送给聚集在她这家食品基地附近的众多乞丐和香客。
+瓦连金娜·帕夫洛夫娜的手下既怕她，也爱她。大斋期，她常在自己的办公 室举办祈祷仪式。在她这里工作的鞑靼人也总是虔敬地参加仪式。在那些食品短 缺的年代，莫斯科的修道院院长们常去找她，也时有主教拜访她。她对其中一些 人恭敬有加，对另一些她不喜欢的“教会再合一运动”人士，她却态度强硬，甚 至颇为粗鲁。
+我不只一次被大卡车从洞穴修道院拉到首都，负责搬运供修道院过复活节和 圣诞节所需的食品。瓦连金娜·帕夫洛夫娜待我们总是十分热情，把我们这几位年轻的见习修士视为己出，而她唯一的儿子早已离世。我们和她成为朋友。更何 况，我们还永远拥有一致的话题，因为我们都是约翰神父的教子。
+约翰神父或许是世界上唯一能让瓦连金娜·帕夫洛夫娜感到胆怯的人，但瓦 连金娜·帕夫洛夫娜十分爱神父，尊重神父。一年两度，她会带最亲近的手下来 到洞穴修道院，在此斋戒、忏悔。在这段时间里，她完全变了一个人，她安静温 顺，羞怯腼腆，与那位“莫斯科女霸主”毫无相似之处。
+1993 年秋，我的生活发生一次转折 :我被任命为普斯科夫洞穴修道院莫斯 科分院主管。办事处计划设在古老的奉献节修道院。为办理各种繁琐文件，我需 要经常返回洞穴修道院。
+瓦连金娜·帕夫洛夫娜患有眼疾，但问题不大，是老年白内障。一次，她让 我请约翰神父为她祝福，因为她要在著名的费奥多罗夫研究所做一个小手术。约 翰神父的回答，老实说，让我大为惊讶 :“不，不，千万别做。现在不行，过些 时候再说。”他言之凿凿。回到莫斯科，我把此话转告瓦连金娜·帕夫洛夫娜。
+她一时六神无主。她已与费奥多罗夫研究所商定好一切。瓦连金娜·帕夫洛 夫娜给约翰神父写去一信，再次请求他祝福手术，并解释说这是小事一桩，不值 得过分关注。
+约翰神父自然也与瓦连金娜·帕夫洛夫娜一样，知道白内障手术没什么大风 险。可在读完我捎回的瓦连金娜·帕夫洛夫娜的信后，他却十分担忧。我在神父 处坐了很久，他神情激动地要我千方百计说服瓦连金娜·帕夫洛夫娜立即放弃 手术。他又给她写了一封长信，求她改变主意，并以教父的名义建议她将手术 延期。
+当时，我恰好获得两周空闲时间。我十多年间从未有过假期，因此，约翰神 父祝福我去克里米亚的疗养院修养两周，当然，一定要带上瓦连金娜·帕夫洛夫 娜。他在给她的信中写明此事，并补充道，手术应放在结束度假一个月之后。
+“她要是马上手术，就会死去 ...... ”在我们道别时，神父忧伤地说道。 可是在莫斯科，针尖碰上麦芒。或许是毕生第一次，瓦连金娜·帕夫洛夫娜奋起拂逆教父的意志。她的上一次度假还远在她的青春时代，火冒三丈的她一遍 又一遍地说 :
+“瞧，神父还想出了这样的主意?度假! ...... 那我的基地交给谁呢?” 她的确气恼，因为一次“不足挂齿的眼科手术”，约翰神父居然“节外生 枝”。可我却不愿再听下去，果断地宣布我将开始准备疗养证，近期即与她一同
+前往克里米亚。最终，瓦连金娜·帕夫洛夫娜似乎妥协了。 数日之后，我在至圣牧首处获休假恩准，便订购了两张疗养证(晚秋时节的
+疗养证并不难订)，然后打电话到食品基地，告知瓦连金娜·帕夫洛夫娜我们的 出发日期。
+“瓦连金娜·帕夫洛夫娜在医院。她今天做手术。”她的一位助手告诉我。 “怎么可能?!”我喊了起来，“这可是约翰神父禁止的啊! ...... ”
+情况是这样的，两天前，一位修女来到食品基地，她剪发做修士前曾是医 生，听闻白内障的事情后，她也因约翰神父的决定而动气。她完全支持瓦连金 娜·帕夫洛夫娜，她还邀请谢尔吉圣三一修道院的一位神父为手术祝福，祝福恰 在这一天完成。心满意足的瓦连金娜·帕夫洛夫娜于是前往费奥多罗夫研究所， 打算赶紧做完这个并不复杂的外科手术，两三天后便与我一同前往克里米亚。但 在手术台上，她突发严重中风，完全瘫痪。
+得此消息，我赶紧打电话去洞穴修道院，找约翰神父的助手、修道院管事菲 拉列特神父。在特殊情况下约翰神父会前往菲拉列特神父处，使用后者的电话。 “你们怎么能这样呢?你们为什么不听我的话呢?!”听到我前言不搭后语
+地讲述这个悲哀故事，神父几乎哭出声来，“我要是坚持什么，就说明我是明知 结果的啊!”
+我对他何以作答呢?我只能问他要如何去帮瓦连金娜·帕夫洛夫娜，因为瓦 连金娜·帕夫洛夫娜始终处于昏迷状态。约翰神父吩咐我从教堂拿些备用的圣饼 和葡萄酒，带往修道小室，当瓦连金娜·帕夫洛夫娜恢复知觉，无论白天还是黑 夜，我都应立即赶过去，为她做忏悔，给她授圣餐。仰仗约翰神父的祈祷，瓦连金娜·帕夫洛夫娜于次日清晨恢复知觉。她的亲 属立即通知我，我在半小时后赶到医院。
+瓦连金娜·帕夫洛夫娜躺在金属推车上，被推到重症室前厅来见我。她躺在 白色的床单下，身躯短小，显得孤立无助。她睁开眼睛看到我，哭了起来。她无 法说话。可不用她说话，我也能听懂她的忏悔。我为她做赦免祷告，为她授圣 餐。我们相互道别。
+次日，弗拉基米尔·楚维金神父再次为她授圣餐。当晚，她去世了。我们怀 着平和宁静的心情安葬了瓦连金娜·帕夫洛夫娜。因为，依循古老的教会传说， 一位在去世当天有幸领受圣餐的人，其灵魂很快便将升入天庭。
+我们奉献节修道院修行生活的恢复和展开，均与约翰神父密切相关。1993 年秋，我在伊维尔圣母像节前夕去见约翰神父，此时是我一生中非常艰难的时 期。我当时已是莫斯科顿河修道院的修士司祭，可由于我的原因，我与修道院院 长阿加福多尔大司祭却关系不和，接下来该怎么办，我全然无知。阿加福多尔神 父让我去洞穴修道院见我的教父，让我的教父来解决我的问题。
+约翰神父对我说了许多安慰话，让我保持修士的忍耐。他的话语有的放矢， 更为重要的是，他对人的爱、对神意的信念和期待如此强烈，使得来见他的人， 无论遭遇多大难题，不仅会获得安慰，还充满崭新的生活力量。在这一方面，约 翰神父还具有一种罕见能力，即说话时的他仿佛能从神那里获得权力，给人以生 活的力量，就像基督那样。
+我们一起坐了很久。晚祷已经开始。约翰神父看一眼钟表，忙乎起来，他让 我先去教堂，说他随后赶到。
+我与修道院的年轻修士们换上圣衣，站在圣母安息大教堂的古老祭坛上等待 唱颂歌。突然，约翰神父走到我们身边。我俩半小时前刚刚分手，可此时的他却 宛若旁人，神情专注严肃。神父一言不发，挽起我的手走到祭坛中央的供桌前。 他深深地鞠躬三次，恭敬地吻了圣餐，并要我也照样做。然后他向我转过身来， 说道 : “现在你就听从神的旨意吧 ...... ” 在此之前我从未听闻约翰神父说过这样的话。
+“你回莫斯科，马上去见至圣牧首，”约翰神父对我说，“求他祝福你从顿河 修道院转到普斯科夫洞穴修道院。你去求至圣牧首，请他祝福普斯科夫洞穴修道 院在莫斯科设立分院，你负责筹建这个分院。”
+我无言以对! ...... 一方面，显而易见，我的生活在此一时刻发生了转折。 与此同时我也意识到，约翰神父所言难以实现!
+“神父，”缓过神来的我说道，“这完全不可能!至圣牧首刚刚公开宣布，严 禁向他提出此类请求。他说他已作出决定，不再允许外地修道院在莫斯科开设分 院。”
+需要在此稍作解释。当时，俄国教会已恢复重建修道院达三百六十家，这一 数目还在逐月递增。许多外地修道院均想在首都开设分院。此类请求让至圣牧首 应接不暇，最终使牧首在一次宗教界会议上语气坚决地说，严禁有人再向他提出 此类请求。因为，如若把莫斯科的教堂拨给各家修道院，那么首都便再无教区教 堂的立足之地。
+我将这些情况说与约翰神父听，可他毫不理会。 “你别担心!”他说道，“你去见至圣牧首，把我对你说的话转告给他。至
+圣牧首会祝福一切的。然后，”神父接下来的口吻完全是事务性的，语气热烈 激动，“他们会拿出几座教堂让你选。别选第一座!余下的就按你的意见选一处 吧。但是别选知名的大教堂。”
+到了唱赞歌的时刻。 “礼拜后我在修道小室等你!”神父说道。
+在赞歌仪式和接下来的礼拜中，我始终在回味约翰神父的话，晚祷结束后我 赶紧去见他。神父把他在祭坛上对我说的话又重复数遍。他安慰我，鼓励我，要 我毫不迟疑地遵循他的话去做。
+诸如“我来告诉你神的旨意”之类的大话和狠话，约翰神父从来不说。此前及此后，我从未听他如此发声。因此，我十分严肃地看待他对我说的话，我克服 恐惧，决定严格按照他的吩咐去做。
+在莫斯科，不久便有了一个面见至圣牧首的机会，我按捺住剧烈的心跳，逐 字逐句地向主教转达约翰神父的话，即把我调往普斯科夫洞穴修道院，并在莫斯 科设立洞穴修道院分院 ......
+我心怀恐惧地等待雷霆闪电在我的头顶出现，可令人惊奇的是，至圣牧首却 认为设立普斯科夫洞穴修道院分院的主意十分及时，十分正确。原来，这些天里 牧首正巧获悉一条消息，称洞穴修道院所在的城市毗邻新近独立的爱沙尼亚，距 边境仅五公里，因而可能实行特殊的边境地区规定，限制朝圣者自由前往普斯科 夫洞穴修道院。在此情况下，牧首认为，会对朝圣者造成不便的边境地区特殊规 定一旦施行，莫斯科的分院便可向洞穴修道院提供帮助。至圣牧首立时委派阿尔 谢尼(叶皮法诺夫)主教和弗拉基米尔·季瓦科夫大司祭负责为洞穴修道院分院 遴选一处教堂。
+阿尔谢尼主教建议的第一处场所，是不久前归还教会的圣母帡幪节修道院。 我赶去查看，但我想起约翰神父的话，即要拒绝第一座教堂，实况也的确如此， 因为圣母帡幪节修道院对于设立分院而言过于庞大。
+于是主教又提供给我两处选址 :一处是位于伊兹马依洛沃的圣母帡幪节大教 堂，一处是位于卢比扬卡的奉献节修道院。伊兹马依洛沃的教堂让我感觉过于庞 大壮观，奉献节教堂却恰好契合约翰神父的意思。再说，这不仅是座教堂，而且 曾为修道院，后在 1925 年被关闭，修行生活在这里或许更易恢复。我打电话给 洞穴修道院的菲拉列特神父，他帮我接通了神父的电话。
+“奉献节教堂?就在管道广场后面?”神父对莫斯科的教堂了如指掌，“就 选它!”
+自分院落成至今已过去十八年，在此期间，无论欢乐岁月还是艰难时分，约 翰神父始终支持我们，给我们以祷告、祝福甚或严厉的斥责。他赠予我们多幅圣 像，其中包括他最喜爱的弗拉基米尔圣像。约翰神父祝福建立修道院出版社、研修班网站、孤儿院和辅助产业。尤其在艰难的初创时期，神父其实在密切监督复 建修道院的每一步骤。此后，当关于洞穴修道院会对朝圣者关闭的担忧烟消云 散，约翰神父仍请求至圣牧首恩准将洞穴修道院分院改建为奉献节修道院。
+奉献节修道院的教友们尊敬约翰神父为我们修道院的建院长老，他是为我们 祈祷的人，是我们的精神导师和大恩人。我们每天都为他灵魂的安宁而祈祷。他 的布道、书信和训诫，是修道院教友、研修班学生和众多教民的案头书。
+我特别想回忆，人们的灵魂在与约翰神父的交往中是如何变化和复活的，可 在我认识约翰神父的这二十五年间发生的一切，却很难转述。虽说我也想承认， 我对他的认识或许有误。约翰神父整个人构成了一个美妙惊人的秘密。
+有时他会在我们面前展示出令人意外的一面，我们只能目瞪口呆。譬如，我 曾十分吃惊地听他道出一句地道的劳改营囚犯黑话，而且他还是用平平常常的语 气说出的，似乎脱口而出，这让我简直难以相信自己的耳朵!
+一次，在离普斯科夫一百公里的一个偏僻乡村教区，我的朋友、修士司祭拉 法伊尔处来了一位客人，即他的侄子瓦列里。明眼人一看便知，这小伙子不是教 会人士，他来找他的神父叔叔并非为着斋戒和祈祷。情况果然如此。瓦列里是在 躲避警察。他并未保密太久，第一晚便将实情和盘托出，原来他在家乡被指认犯 下一项重罪，可他称自己无辜。虽说他是个面有凶相的小伙子，但我们仍相信他 的话。的确，他的清白最终得以确认，他并未参与将他列为嫌犯的那桩凶案。
+我们将他带往修道院去见约翰神父，请神父为他指明将来的路。神父热情接 待小伙子，让他坐在自己身边，安慰他，详细询问事情经过。但后来，神父突然 出人意料地说 :
+“瓦列里，你还是该去吃吃苦头。” “为什么?!”瓦列里生气了。
+约翰神父示意瓦列里靠近些，然后对他耳语几句。瓦列里身体一躲，惊愕 地盯着神父。于是约翰神父让我和拉法伊尔神父出去一下，他要与瓦列里单独 交谈。半小时后，约翰神父请我们回屋，我们看见瓦列里坐在小沙发上，泪流满 面，可在相识的这几天里他却首次露出了平静甚至幸福的神情。约翰神父停止忏 悔，解下法衣上的长巾和套袖。约翰神父帮助瓦列里在修道院斋戒三天，接受 涂圣油和领圣餐仪式。在此之后，约翰神父祝福瓦列里返回奇斯托波里。“为什 么?”我们困惑不解。但显而易见，约翰神父已对瓦列里说明一切，因此瓦列里 在与神父分手时问道 :
+“在监狱里该怎么做呢?” 约翰神父十分决然地说道 :
+“很简单 :别相信，别害怕，别哀求!” 然后又换一种语气，用平常的声音说 :
+“最重要的是要祷告。在那里上帝离你更近，你会看到的!” 约翰神父胸有成竹地说。
+1950 年，有三人写了一份检举约翰·克列斯奇扬金神父的告密信，这三人
+分别为约翰神父当年所在那家莫斯科教堂的住持、唱诗班主管和助祭长。他们指 责约翰神父吸引一批青年，不让他们加入共青团，他本人还进行反苏宣传。
+约翰神父被捕。在卢比扬卡的内部监狱，他在单人囚室被拘禁了近一年。他 在被审讯时遭到了严刑拷打。
+接受审讯时，嫌犯克列斯奇扬金承认他身边的确聚有几位青年，但作为教会 人士，他无法赶走他们，无法不给他们以必需的关注。克列斯奇扬金在谈到共青 团的问题时说，他没有祝福那些青年加入这一组织，因为这是一个无神论组织， 基督徒无法介入此类团体。他拒绝承认自己犯有反苏宣传罪，他说自己是一位神 职人员，对此类活动毫无兴趣。在整整一年时间里，除审讯者点明的人，克列斯 奇扬金在审讯中未提及任何人名。他知道，他提及的每个人均会被逮捕。
+神父曾对我们谈及审讯他的人。他俩是同龄人。1950 年，他俩刚满四十 岁。审讯者与神父一样，名字也叫伊万(约翰是伊万的别称)。他俩甚至连父称 也相同，即米哈伊洛维奇。约翰神父说，他如今每天在祈祷中都会提及那人。要忘掉那人也不可能。 “他打断了我的十根指头!”神父常说，话语中甚至带有某种惊讶，同时将
+残疾的双手伸向他视力很差的双眼。 “是啊，”我们当时想，“约翰神父的祈祷，而且是终生祈祷，这可不是小意
+思!我们很想知道这位名叫伊万·米哈伊洛维奇的审讯员的命运，从前的嫌犯伊 万·米哈伊洛维奇·克列斯奇扬金终生为他祷告。”为彻底揭穿罪犯，审讯者安排了一次对质，证人即那位举报约翰神父的教堂 住持。约翰神父当时已经知道，此人正是其被捕和受难的始作俑者。可当这位住 持走进审讯室，约翰神父看到这位与自己多次共同主持宗教仪式的教友，却十分 高兴，竟扑过去与对方紧紧拥抱! ...... 住持在约翰神父的怀抱里瘫软下去，失 去知觉。对质未能进行。即便如此，约翰神父仍被判在劳改营服刑八年。
+关于一位古代教父曾有此记载，即他由于过多的爱竟忘记什么是恶。我们这 些见习修士当年时常思考 :上帝赋予苦修者以洞察和神力，让他们共享他的秘 密，他这样做的理由何在，这需要苦修者建立怎样的功勋，铸就怎样的灵魂?想 来甚至感到惊诧，那洞见人们最隐秘思想和行为的人，他将一视同仁地对世间每 个人都怀有最仁慈的爱心，他心中充满受难圣子带至此世的强大隐秘的爱，宽恕 一切的爱。
+说到约翰神父的劳改营经历，他的反应总是令我惊奇，神父常说，那是他一 生中最幸福的时期。
+“因为上帝就在身边!”神父兴高采烈地解释。虽说他无疑也清楚，我们不 可能完全理解他。
+“不知为什么我没留下什么坏印象，”他在谈及劳改营时常说，“我只记得 : 天空辽阔，天使们在天上歌唱!我如今已经没有这样的祷告 ...... ”
+在神父接待其众多来访者的修道小室里，他的出现总是风风火火。约翰神父 像一阵风冲进屋来，是的，的确像一阵风，在他七十岁时，在他八十岁时，甚至 到他年逾九旬。由于年老体衰，他有些脚步踉跄，他冲到圣像前，静立片刻，不 看任何人，全神贯注地为来见他的人祷告。
 </div>
 
 
