--- a/index.html
+++ b/index.html
@@ -48,106 +48,52 @@
 
 <div class="a">
 <p style="text-align:center;">
-但我毕竟看到了一个令我惊讶的陌生世界。我数次路遇约翰神父，与他交谈 数分钟。我当时觉得他是个普通老人，他当然很善良，但过于普通，没什么意 思。我向他提出的问题看来十分愚蠢，可约翰神父始终倾听着，由于他自己没有 时间，便建议我去找塔夫里昂院长。我当时悲哀地发现我很难记住这个名字。但 对于我当时特别关心的问题，即是否该学电影，教会怎么看待电影，约翰神父的 回答却令人意外 :
-“电影是一种语言。可以用这种语言大喊 :‘把他钉上十字架!’也可以用这 种语言颂扬上帝。”
-我立时记住此话，觉得这个“老头子”并不那么普通 ......
-我当时如何能知道，此人将决定我的整个命运，成为我一生的主要发现之 一，对我而言，他永远是基督徒、修士和神父的范例。
-这位老人在道别时热情拥抱我，为我祝福，并嘱咐我一定再来修道院，我却 对这一可能性顿生疑惑，我当时觉得，洞穴修道院来一次便已足够。
-离开修道院的前一天，我终于费力地想起约翰神父建议我去见的那位修士的 名字，即塔夫里昂院长，我找到了他。这是一位身材不高、四十岁左右的修士， 接受过高等教育(我这才理解约翰神父的用意，因为在当时的情况下，我需要
-“智慧的交谈”)。塔夫里昂神父对我很迁就。他认真回答我提出的众多问题，在 交谈的最后建议我阅读《圣经》和古代教父们的著作，早晚依据祈祷书祈祷，经 常忏悔，领受圣餐，更重要的是要找一位教父。塔夫里昂送我一本收有圣诗的祈祷书，此书在当时十分珍贵。他也邀请我再来修道院。 我熬过这整整十天，熬过这些早起、杂役、无休止的礼拜，以及礼拜时在我
-耳边不时狂吼的怪人。我不能说我在怜惜失去的时间，可到最后一天我早已归心 似箭，想回莫斯科。
-人们对我热情相送。遵照院长安排，司库送我整整三十卢布作为路费。我还 接过一个装满各种美食的袋子。我前去教堂祷告，心生几丝感激和别愁，可在步 出修道院时却充满即将返回莫斯科的喜悦。
-可是突然，我心头却遭到重重一击。在这十来天里我首度步出修道院大门， 可我心生的最初感觉却是一个难以遏制的愿望，即扔掉袋子往回跑!我无论如何 没想到自己会有这一念头! ...... 我竭力克制自己，缓步走向汽车站，越来越强 烈地意识到自己已步入与十天前的世界完全不同的另一世界。此时是傍晚。街上走着寻常的人们。迎面过来一个胖胖的小伙子，他边走边 吃，嚼着馅饼，啃着苹果。我记得，这普普通通的场景让我大为恐惧。我不知原 因何在。最终我想明白了，这些天里我已习惯在吃食物前祷告上帝，这边走边吃 东西的人于是便让我觉得有些不可思议。
-一群青年走出电影院。有人哈哈大笑。一对对情侣相拥着从我身边走过。一 切都很正常。仅有一点，即我不知为何觉得自己在此完全是个外人。
-与我同乘一个包厢的是两位姑娘和一位与我年纪相仿的青年。我爬到上铺， 他们此时却掏出食物和葡萄酒。他们显然做好了快乐旅行的准备，他们也力邀我 加入。十天前，我或许会毫不迟疑地加入进去，与他们欢度时光。可此时，我却 含混地回答一声，便躲在上铺的角落里，一路上始终在阅读塔夫里昂神父赠我的 祈祷书上那些我不明就里的斯拉夫词汇，耳边是三位旅伴欢乐的责怪和要我下 往罪孽尘世的召唤。不，我对这三位年轻人没有丝毫谴责，我的上帝，我也并 不认为自己是圣徒，而他们是罪人。我甚至丝毫没有此类想法。只不过，一切都 变了。在莫斯科
-的确，一切都变了。我不知究竟发生了什么，但世界对我而言已失去一切兴 致和诱惑。昨日还热衷的事情，如今即便不是毫无意义(我不敢滥用此词)，但 也显得十分遥远。我认不出自己。友人们也认不出我。
-回到莫斯科后，我突然惊讶地发现，这十来天里我不仅没有抽烟，甚至将这 一多年养成的习惯忘得一干二净，以前，我通常一天至少要抽两包烟。
-我自己感觉良好的唯一去处即教堂。友人，娱乐，从前热衷的工作，均难以 让我动心。甚至连书籍，连我爱读的陀思妥耶夫斯基和托尔斯泰的书，也无法再 激起我的关注。我知道自己发生了巨大变化。或许，先前我感觉亲切的世界已一 去不返。眼前展现出另一种生活，与其相比，我先前度过的二十四年生活均不值 一提。我真心挚爱从前那个世界，怜惜它，与它心心相印! ...... 可我的心已不 再属于旧的约定，而转向突然呈现的新约定，即人与上帝之间不可遏制的秘密 约定。
-遵循塔夫里昂神父的建议，我翻开古代教父们的著作。他们的著作让我深感 震惊。最令人遗憾的是，我们拥有这座无与伦比的宝库，却竟然对它一无所知。 我眼前展现出一片由伟大作者们构成的新大陆，他们在数百年间积累起对生
-活的认知体验，这些体验有别于优秀哲学家们和经典作家们的看法。以撒·西 林，约翰·列斯特维奇尼克，多罗费神父，金口约翰，我们的伊格纳吉(勃里扬 恰尼诺夫)和隐修者费奥凡，吉洪·扎东斯基，所有这些神学伟人都是我们本该 继承的遗产，却被我们长期忽视。
-一个月之后，我已能理解教堂的礼拜，能领会那些教会斯拉夫语词汇深刻丰 富的含义。早晚的祈祷成为渴求的时刻，圣餐和忏悔成为必需。不久，我再次前往洞穴修道院。此后，只要情况许可，我便抽身前去洞穴修 道院。电影让我感觉索然无味，我想这对电影而言亦并非太大损失。平心而论， 我只是在积攒大学毕业所需的学时。我的大学老师们见状颇感惋惜，可他们很快 便明白他们也无能为力。做完摄影棚里的例行工作后，我有两周空闲时间，于是 便坐上火车，赶往修道院。
-我为何如此向往修道院呢?首先是因为那里的人。我想在此谈谈修道院里的 那些人。约翰神父
-我在 1982 年去普斯科夫洞穴修道院时首次见到约翰大司祭(克列斯奇扬 金)。当时他似乎并未给我留下特殊印象，不过是一位善良老人，他身体结实 (他当时七十二岁)，总是步履匆匆，甚至显得十分忙碌，身边永远围有大批朝
-圣者。修道院里的其他修士则显得更为严肃节制，甚至更为稳重。 晚礼拜前，普斯科夫洞穴修道院宿舍里往往会冲出一个奇特队列。年轻的修 道院管事菲拉列特神父挽着约翰神父的胳膊，拖着他一路小跑，约翰神父勉勉强 强方能跟上管事。在外面等待约翰神父的一群朝圣者，立时跟在他俩身后。他 们与两位神父一起，像一阵风在修道院的院子里卷过。修士斗篷和修士冠随风 飘扬，约翰神父不时磕磕碰碰，跑得气喘吁吁，匆忙之间仍试图为某位朝圣者祝 福，甚至回答问题。菲拉列特神父见状十分生气，扯着刺耳的尖嗓门喊叫，时而 冲着约翰神父，时而冲着朝圣者，时而甚至挥动雨伞驱赶朝圣者。最后，他终于
-把约翰神父塞进教堂，然后动作更快地把他拉上祭坛。 应该说，管事这么做绝非出于恶意，而是担心约翰神父天冷时在外面被冻感
-冒。而在天气暖和时，神父甚至难以抵达教堂，因为人们会一连数小时围住他 不放。
-我和其他见习修士朋友日复一日地目睹这一场景，开怀大笑，直到我们逐渐 意识到，这位跟在修道院管事身后踉跄而行的约翰神父实为人间少有的奇人之 一，对于像他这样的人而言，空间和时间的界限更为开阔，上帝赋予他们更为广 阔的眼界，能看到过去和将来，一如看到现在。我们带着惊讶、不无恐惧地确信 自己的体验，即在这位被不怀好意者戏称为动画片中的“爱波利特大夫”(楚科 夫斯基所作童话中一位给动物治病的和蔼可亲但粗心大意的大夫)的老人面前，人的灵魂会袒露其一切深藏不露的秘密、秘而不宣的愿望和貌似隐蔽的行为和思 想。在古代，这些人被称作先知。在我们东正教会，他们被称作长老。
-约翰神父从不自称长老。听闻此类称谓，他总是害怕地两手一拍 :“哪里是 什么长老?!我们最多也就是有些经历的小老头。”极其谦逊的他，直到临终都 对此深信不疑。然而，熟知约翰神父的许多人却坚信，约翰神父即真正的上帝使 者，他懂得神的意志。
-是的，这一点至关重要!约翰神父洞悉上帝关于人的神圣意志。但我们当时 对此同样未能立时领会。我们起初觉得，这位神父只是个十分智慧的老人。正是 为着这一名声在外的“智慧”，人们自俄国各地赶来见他。只是后来我们才惊讶 地发现，这成千上万的人希望从约翰神父处获得的绝非某一智慧的建议。
-世间不乏能根据人生经历给别人提出各种建议的人。可是，前来拜访约翰神 父的人却往往处于他们命运的悲剧关头或转折关头，他们想从约翰神父处听到的 建议并非关涉如何智慧地做事，而是关涉如何正确地做人。确切地说，这位长老与所有他者的差异正在于此，即对神的意志的认知。他因之有别于那些大名鼎鼎 的智者和知识渊博的神学家，甚至有别于经验丰富的杰出修士。
-我记得，我当年在做见习修士时，曾有一位来自莫斯科的朝圣者走到我身 边，告诉我他亲眼目睹的一个场景。一次，约翰神父像往常一样被许多人环绕， 他走过修道院的院子向教堂赶去，突然，一位恸哭不止的妇人向他扑来，手里抱 着一个两三岁的男孩。
-“神父啊，请祝福这个要做手术的孩子吧!莫斯科的大夫急着给他做手 术......”
-约翰神父停下脚步，对妇人说了两句令这位来自莫斯科的朝圣者大为震惊 的话 :
-“千万别做手术!孩子会死在手术台上。祷告吧，给他治病，但千万别做手 术。他会好起来的。”
-他给男孩画了一个十字。
-我和这位朝圣者坐在一起，我俩因这样的想法而担心 :万一神父误判了呢? 万一孩子死了怎么办?如果发生不幸，孩子的母亲该如何对待约翰神父呢?
-我们当然不会怀疑约翰神父轻视医学，虽说在宗教界的确有极少数人敌视医 学。我们也知道他在给人祝福时，有时也建议被祝福着去做外科手术。他的教子 中就有多位名医。
-我们惶恐地等待结果，悲痛欲绝的母亲会返回修道院，从而引出一桩可怕的 丑闻，还是一切果然恰如约翰神父的预言?眼见神父心平气和，每日照例奔走在 教堂和修道小室之间，我们所能得出的结论只有一条，即长老对自己给出的果断 建议深信不疑。
-信赖和服从，是东正教徒与其教父关系中的首要原则。诚然，并非每位教父 都配得上人们的完全服从。不过，此类教父为数极少。这其实是个复杂问题。有 过此类悲剧，即某些不明事理的神职人员自视为长老，且颐指气使，肆意发号施 令，最终做出宗教生活中绝不允许的事情，即压制教子的自由。约翰神父从不专横，从不把自己的意志强加于他人。他无比珍视人的自由， 对人的自由怀有某种特殊景仰。神父时刻准备去劝说，去开导，甚至准备去央 求，以便他认为对求助者而言必不可少的那些做法得以履行。可是，如若对方坚 持己见，神父通常会叹息一声，说道 :
-“那您就试一试吧。您就按您的想法做吧 ...... ” 据我所知，那些没有按照约翰神父的建议去做的人，最终全都追悔莫及。通
-常，他们会再度来到神父面前，满怀按照神父所言行事的坚定愿望。而神父一如 既往地带着同情和爱意接待这些人，不惜花费时间和精力，尽其所能地矫正他们 的错误。
-这个关涉男孩和手术的故事，令我想起一件发生在十年前的相似事件，可这 件事的结局却大相径庭。
-当时，在莫斯科生活着一位非常独特有趣的妇人，即瓦连金娜·帕夫洛夫 娜·科诺瓦洛娃。她就像俄国画家库斯托季耶夫画中的人物，是地道的莫斯科女 商人。她是一位六十来岁的寡妇，是和平大街上一家大型食品基地的主任。瓦 连金娜·帕夫洛夫娜身材肥胖矮小，通常都端庄地坐在她办公室里宽大的办公桌 后面。即便在苏联动乱时期，她办公室的四壁也挂满装有纸质圣像画复制品的巨 大镜框，办公桌下方的地板上摆有一个巨大的塑料口袋，里面装满了钱。瓦连金 娜·帕夫洛夫娜根据自己的需要处理这些钱，时而让手下去购买一批新鲜菜蔬， 时而把钱送给聚集在她这家食品基地附近的众多乞丐和香客。
-瓦连金娜·帕夫洛夫娜的手下既怕她，也爱她。大斋期，她常在自己的办公 室举办祈祷仪式。在她这里工作的鞑靼人也总是虔敬地参加仪式。在那些食品短 缺的年代，莫斯科的修道院院长们常去找她，也时有主教拜访她。她对其中一些 人恭敬有加，对另一些她不喜欢的“教会再合一运动”人士，她却态度强硬，甚 至颇为粗鲁。
-我不只一次被大卡车从洞穴修道院拉到首都，负责搬运供修道院过复活节和 圣诞节所需的食品。瓦连金娜·帕夫洛夫娜待我们总是十分热情，把我们这几位年轻的见习修士视为己出，而她唯一的儿子早已离世。我们和她成为朋友。更何 况，我们还永远拥有一致的话题，因为我们都是约翰神父的教子。
-约翰神父或许是世界上唯一能让瓦连金娜·帕夫洛夫娜感到胆怯的人，但瓦 连金娜·帕夫洛夫娜十分爱神父，尊重神父。一年两度，她会带最亲近的手下来 到洞穴修道院，在此斋戒、忏悔。在这段时间里，她完全变了一个人，她安静温 顺，羞怯腼腆，与那位“莫斯科女霸主”毫无相似之处。
-1993 年秋，我的生活发生一次转折 :我被任命为普斯科夫洞穴修道院莫斯 科分院主管。办事处计划设在古老的奉献节修道院。为办理各种繁琐文件，我需 要经常返回洞穴修道院。
-瓦连金娜·帕夫洛夫娜患有眼疾，但问题不大，是老年白内障。一次，她让 我请约翰神父为她祝福，因为她要在著名的费奥多罗夫研究所做一个小手术。约 翰神父的回答，老实说，让我大为惊讶 :“不，不，千万别做。现在不行，过些 时候再说。”他言之凿凿。回到莫斯科，我把此话转告瓦连金娜·帕夫洛夫娜。
-她一时六神无主。她已与费奥多罗夫研究所商定好一切。瓦连金娜·帕夫洛 夫娜给约翰神父写去一信，再次请求他祝福手术，并解释说这是小事一桩，不值 得过分关注。
-约翰神父自然也与瓦连金娜·帕夫洛夫娜一样，知道白内障手术没什么大风 险。可在读完我捎回的瓦连金娜·帕夫洛夫娜的信后，他却十分担忧。我在神父 处坐了很久，他神情激动地要我千方百计说服瓦连金娜·帕夫洛夫娜立即放弃 手术。他又给她写了一封长信，求她改变主意，并以教父的名义建议她将手术 延期。
-当时，我恰好获得两周空闲时间。我十多年间从未有过假期，因此，约翰神 父祝福我去克里米亚的疗养院修养两周，当然，一定要带上瓦连金娜·帕夫洛夫 娜。他在给她的信中写明此事，并补充道，手术应放在结束度假一个月之后。
-“她要是马上手术，就会死去 ...... ”在我们道别时，神父忧伤地说道。 可是在莫斯科，针尖碰上麦芒。或许是毕生第一次，瓦连金娜·帕夫洛夫娜奋起拂逆教父的意志。她的上一次度假还远在她的青春时代，火冒三丈的她一遍 又一遍地说 :
-“瞧，神父还想出了这样的主意?度假! ...... 那我的基地交给谁呢?” 她的确气恼，因为一次“不足挂齿的眼科手术”，约翰神父居然“节外生 枝”。可我却不愿再听下去，果断地宣布我将开始准备疗养证，近期即与她一同
-前往克里米亚。最终，瓦连金娜·帕夫洛夫娜似乎妥协了。 数日之后，我在至圣牧首处获休假恩准，便订购了两张疗养证(晚秋时节的
-疗养证并不难订)，然后打电话到食品基地，告知瓦连金娜·帕夫洛夫娜我们的 出发日期。
-“瓦连金娜·帕夫洛夫娜在医院。她今天做手术。”她的一位助手告诉我。 “怎么可能?!”我喊了起来，“这可是约翰神父禁止的啊! ...... ”
-情况是这样的，两天前，一位修女来到食品基地，她剪发做修士前曾是医 生，听闻白内障的事情后，她也因约翰神父的决定而动气。她完全支持瓦连金 娜·帕夫洛夫娜，她还邀请谢尔吉圣三一修道院的一位神父为手术祝福，祝福恰 在这一天完成。心满意足的瓦连金娜·帕夫洛夫娜于是前往费奥多罗夫研究所， 打算赶紧做完这个并不复杂的外科手术，两三天后便与我一同前往克里米亚。但 在手术台上，她突发严重中风，完全瘫痪。
-得此消息，我赶紧打电话去洞穴修道院，找约翰神父的助手、修道院管事菲 拉列特神父。在特殊情况下约翰神父会前往菲拉列特神父处，使用后者的电话。 “你们怎么能这样呢?你们为什么不听我的话呢?!”听到我前言不搭后语
-地讲述这个悲哀故事，神父几乎哭出声来，“我要是坚持什么，就说明我是明知 结果的啊!”
-我对他何以作答呢?我只能问他要如何去帮瓦连金娜·帕夫洛夫娜，因为瓦 连金娜·帕夫洛夫娜始终处于昏迷状态。约翰神父吩咐我从教堂拿些备用的圣饼 和葡萄酒，带往修道小室，当瓦连金娜·帕夫洛夫娜恢复知觉，无论白天还是黑 夜，我都应立即赶过去，为她做忏悔，给她授圣餐。仰仗约翰神父的祈祷，瓦连金娜·帕夫洛夫娜于次日清晨恢复知觉。她的亲 属立即通知我，我在半小时后赶到医院。
-瓦连金娜·帕夫洛夫娜躺在金属推车上，被推到重症室前厅来见我。她躺在 白色的床单下，身躯短小，显得孤立无助。她睁开眼睛看到我，哭了起来。她无 法说话。可不用她说话，我也能听懂她的忏悔。我为她做赦免祷告，为她授圣 餐。我们相互道别。
-次日，弗拉基米尔·楚维金神父再次为她授圣餐。当晚，她去世了。我们怀 着平和宁静的心情安葬了瓦连金娜·帕夫洛夫娜。因为，依循古老的教会传说， 一位在去世当天有幸领受圣餐的人，其灵魂很快便将升入天庭。
-我们奉献节修道院修行生活的恢复和展开，均与约翰神父密切相关。1993 年秋，我在伊维尔圣母像节前夕去见约翰神父，此时是我一生中非常艰难的时 期。我当时已是莫斯科顿河修道院的修士司祭，可由于我的原因，我与修道院院 长阿加福多尔大司祭却关系不和，接下来该怎么办，我全然无知。阿加福多尔神 父让我去洞穴修道院见我的教父，让我的教父来解决我的问题。
-约翰神父对我说了许多安慰话，让我保持修士的忍耐。他的话语有的放矢， 更为重要的是，他对人的爱、对神意的信念和期待如此强烈，使得来见他的人， 无论遭遇多大难题，不仅会获得安慰，还充满崭新的生活力量。在这一方面，约 翰神父还具有一种罕见能力，即说话时的他仿佛能从神那里获得权力，给人以生 活的力量，就像基督那样。
-我们一起坐了很久。晚祷已经开始。约翰神父看一眼钟表，忙乎起来，他让 我先去教堂，说他随后赶到。
-我与修道院的年轻修士们换上圣衣，站在圣母安息大教堂的古老祭坛上等待 唱颂歌。突然，约翰神父走到我们身边。我俩半小时前刚刚分手，可此时的他却 宛若旁人，神情专注严肃。神父一言不发，挽起我的手走到祭坛中央的供桌前。 他深深地鞠躬三次，恭敬地吻了圣餐，并要我也照样做。然后他向我转过身来， 说道 : “现在你就听从神的旨意吧 ...... ” 在此之前我从未听闻约翰神父说过这样的话。
-“你回莫斯科，马上去见至圣牧首，”约翰神父对我说，“求他祝福你从顿河 修道院转到普斯科夫洞穴修道院。你去求至圣牧首，请他祝福普斯科夫洞穴修道 院在莫斯科设立分院，你负责筹建这个分院。”
-我无言以对! ...... 一方面，显而易见，我的生活在此一时刻发生了转折。 与此同时我也意识到，约翰神父所言难以实现!
-“神父，”缓过神来的我说道，“这完全不可能!至圣牧首刚刚公开宣布，严 禁向他提出此类请求。他说他已作出决定，不再允许外地修道院在莫斯科开设分 院。”
-需要在此稍作解释。当时，俄国教会已恢复重建修道院达三百六十家，这一 数目还在逐月递增。许多外地修道院均想在首都开设分院。此类请求让至圣牧首 应接不暇，最终使牧首在一次宗教界会议上语气坚决地说，严禁有人再向他提出 此类请求。因为，如若把莫斯科的教堂拨给各家修道院，那么首都便再无教区教 堂的立足之地。
-我将这些情况说与约翰神父听，可他毫不理会。 “你别担心!”他说道，“你去见至圣牧首，把我对你说的话转告给他。至
-圣牧首会祝福一切的。然后，”神父接下来的口吻完全是事务性的，语气热烈 激动，“他们会拿出几座教堂让你选。别选第一座!余下的就按你的意见选一处 吧。但是别选知名的大教堂。”
-到了唱赞歌的时刻。 “礼拜后我在修道小室等你!”神父说道。
-在赞歌仪式和接下来的礼拜中，我始终在回味约翰神父的话，晚祷结束后我 赶紧去见他。神父把他在祭坛上对我说的话又重复数遍。他安慰我，鼓励我，要 我毫不迟疑地遵循他的话去做。
-诸如“我来告诉你神的旨意”之类的大话和狠话，约翰神父从来不说。此前及此后，我从未听他如此发声。因此，我十分严肃地看待他对我说的话，我克服 恐惧，决定严格按照他的吩咐去做。
-在莫斯科，不久便有了一个面见至圣牧首的机会，我按捺住剧烈的心跳，逐 字逐句地向主教转达约翰神父的话，即把我调往普斯科夫洞穴修道院，并在莫斯 科设立洞穴修道院分院 ......
-我心怀恐惧地等待雷霆闪电在我的头顶出现，可令人惊奇的是，至圣牧首却 认为设立普斯科夫洞穴修道院分院的主意十分及时，十分正确。原来，这些天里 牧首正巧获悉一条消息，称洞穴修道院所在的城市毗邻新近独立的爱沙尼亚，距 边境仅五公里，因而可能实行特殊的边境地区规定，限制朝圣者自由前往普斯科 夫洞穴修道院。在此情况下，牧首认为，会对朝圣者造成不便的边境地区特殊规 定一旦施行，莫斯科的分院便可向洞穴修道院提供帮助。至圣牧首立时委派阿尔 谢尼(叶皮法诺夫)主教和弗拉基米尔·季瓦科夫大司祭负责为洞穴修道院分院 遴选一处教堂。
-阿尔谢尼主教建议的第一处场所，是不久前归还教会的圣母帡幪节修道院。 我赶去查看，但我想起约翰神父的话，即要拒绝第一座教堂，实况也的确如此， 因为圣母帡幪节修道院对于设立分院而言过于庞大。
-于是主教又提供给我两处选址 :一处是位于伊兹马依洛沃的圣母帡幪节大教 堂，一处是位于卢比扬卡的奉献节修道院。伊兹马依洛沃的教堂让我感觉过于庞 大壮观，奉献节教堂却恰好契合约翰神父的意思。再说，这不仅是座教堂，而且 曾为修道院，后在 1925 年被关闭，修行生活在这里或许更易恢复。我打电话给 洞穴修道院的菲拉列特神父，他帮我接通了神父的电话。
-“奉献节教堂?就在管道广场后面?”神父对莫斯科的教堂了如指掌，“就 选它!”
-自分院落成至今已过去十八年，在此期间，无论欢乐岁月还是艰难时分，约 翰神父始终支持我们，给我们以祷告、祝福甚或严厉的斥责。他赠予我们多幅圣 像，其中包括他最喜爱的弗拉基米尔圣像。约翰神父祝福建立修道院出版社、研修班网站、孤儿院和辅助产业。尤其在艰难的初创时期，神父其实在密切监督复 建修道院的每一步骤。此后，当关于洞穴修道院会对朝圣者关闭的担忧烟消云 散，约翰神父仍请求至圣牧首恩准将洞穴修道院分院改建为奉献节修道院。
-奉献节修道院的教友们尊敬约翰神父为我们修道院的建院长老，他是为我们 祈祷的人，是我们的精神导师和大恩人。我们每天都为他灵魂的安宁而祈祷。他 的布道、书信和训诫，是修道院教友、研修班学生和众多教民的案头书。
-我特别想回忆，人们的灵魂在与约翰神父的交往中是如何变化和复活的，可 在我认识约翰神父的这二十五年间发生的一切，却很难转述。虽说我也想承认， 我对他的认识或许有误。约翰神父整个人构成了一个美妙惊人的秘密。
-有时他会在我们面前展示出令人意外的一面，我们只能目瞪口呆。譬如，我 曾十分吃惊地听他道出一句地道的劳改营囚犯黑话，而且他还是用平平常常的语 气说出的，似乎脱口而出，这让我简直难以相信自己的耳朵!
-一次，在离普斯科夫一百公里的一个偏僻乡村教区，我的朋友、修士司祭拉 法伊尔处来了一位客人，即他的侄子瓦列里。明眼人一看便知，这小伙子不是教 会人士，他来找他的神父叔叔并非为着斋戒和祈祷。情况果然如此。瓦列里是在 躲避警察。他并未保密太久，第一晚便将实情和盘托出，原来他在家乡被指认犯 下一项重罪，可他称自己无辜。虽说他是个面有凶相的小伙子，但我们仍相信他 的话。的确，他的清白最终得以确认，他并未参与将他列为嫌犯的那桩凶案。
-我们将他带往修道院去见约翰神父，请神父为他指明将来的路。神父热情接 待小伙子，让他坐在自己身边，安慰他，详细询问事情经过。但后来，神父突然 出人意料地说 :
-“瓦列里，你还是该去吃吃苦头。” “为什么?!”瓦列里生气了。
-约翰神父示意瓦列里靠近些，然后对他耳语几句。瓦列里身体一躲，惊愕 地盯着神父。于是约翰神父让我和拉法伊尔神父出去一下，他要与瓦列里单独 交谈。半小时后，约翰神父请我们回屋，我们看见瓦列里坐在小沙发上，泪流满 面，可在相识的这几天里他却首次露出了平静甚至幸福的神情。约翰神父停止忏 悔，解下法衣上的长巾和套袖。约翰神父帮助瓦列里在修道院斋戒三天，接受 涂圣油和领圣餐仪式。在此之后，约翰神父祝福瓦列里返回奇斯托波里。“为什 么?”我们困惑不解。但显而易见，约翰神父已对瓦列里说明一切，因此瓦列里 在与神父分手时问道 :
-“在监狱里该怎么做呢?” 约翰神父十分决然地说道 :
-“很简单 :别相信，别害怕，别哀求!” 然后又换一种语气，用平常的声音说 :
-“最重要的是要祷告。在那里上帝离你更近，你会看到的!” 约翰神父胸有成竹地说。
-1950 年，有三人写了一份检举约翰·克列斯奇扬金神父的告密信，这三人
-分别为约翰神父当年所在那家莫斯科教堂的住持、唱诗班主管和助祭长。他们指 责约翰神父吸引一批青年，不让他们加入共青团，他本人还进行反苏宣传。
-约翰神父被捕。在卢比扬卡的内部监狱，他在单人囚室被拘禁了近一年。他 在被审讯时遭到了严刑拷打。
-接受审讯时，嫌犯克列斯奇扬金承认他身边的确聚有几位青年，但作为教会 人士，他无法赶走他们，无法不给他们以必需的关注。克列斯奇扬金在谈到共青 团的问题时说，他没有祝福那些青年加入这一组织，因为这是一个无神论组织， 基督徒无法介入此类团体。他拒绝承认自己犯有反苏宣传罪，他说自己是一位神 职人员，对此类活动毫无兴趣。在整整一年时间里，除审讯者点明的人，克列斯 奇扬金在审讯中未提及任何人名。他知道，他提及的每个人均会被逮捕。
-神父曾对我们谈及审讯他的人。他俩是同龄人。1950 年，他俩刚满四十 岁。审讯者与神父一样，名字也叫伊万(约翰是伊万的别称)。他俩甚至连父称 也相同，即米哈伊洛维奇。约翰神父说，他如今每天在祈祷中都会提及那人。要忘掉那人也不可能。 “他打断了我的十根指头!”神父常说，话语中甚至带有某种惊讶，同时将
-残疾的双手伸向他视力很差的双眼。 “是啊，”我们当时想，“约翰神父的祈祷，而且是终生祈祷，这可不是小意
-思!我们很想知道这位名叫伊万·米哈伊洛维奇的审讯员的命运，从前的嫌犯伊 万·米哈伊洛维奇·克列斯奇扬金终生为他祷告。”为彻底揭穿罪犯，审讯者安排了一次对质，证人即那位举报约翰神父的教堂 住持。约翰神父当时已经知道，此人正是其被捕和受难的始作俑者。可当这位住 持走进审讯室，约翰神父看到这位与自己多次共同主持宗教仪式的教友，却十分 高兴，竟扑过去与对方紧紧拥抱! ...... 住持在约翰神父的怀抱里瘫软下去，失 去知觉。对质未能进行。即便如此，约翰神父仍被判在劳改营服刑八年。
-关于一位古代教父曾有此记载，即他由于过多的爱竟忘记什么是恶。我们这 些见习修士当年时常思考 :上帝赋予苦修者以洞察和神力，让他们共享他的秘 密，他这样做的理由何在，这需要苦修者建立怎样的功勋，铸就怎样的灵魂?想 来甚至感到惊诧，那洞见人们最隐秘思想和行为的人，他将一视同仁地对世间每 个人都怀有最仁慈的爱心，他心中充满受难圣子带至此世的强大隐秘的爱，宽恕 一切的爱。
-说到约翰神父的劳改营经历，他的反应总是令我惊奇，神父常说，那是他一 生中最幸福的时期。
-“因为上帝就在身边!”神父兴高采烈地解释。虽说他无疑也清楚，我们不 可能完全理解他。
-“不知为什么我没留下什么坏印象，”他在谈及劳改营时常说，“我只记得 : 天空辽阔，天使们在天上歌唱!我如今已经没有这样的祷告 ...... ”
-在神父接待其众多来访者的修道小室里，他的出现总是风风火火。约翰神父 像一阵风冲进屋来，是的，的确像一阵风，在他七十岁时，在他八十岁时，甚至 到他年逾九旬。由于年老体衰，他有些脚步踉跄，他冲到圣像前，静立片刻，不 看任何人，全神贯注地为来见他的人祷告。
+做完这件头等大事，他才转身面向客人。他用快乐的眼神打量众人，立即开 始为每人祝福。他对某人耳语几句。他担忧，他解释。他安慰，他建议，他鼓 励。他叹息，他感慨。他两手一拍。总之，他在此时更像一只忙着照看其众多雏 鸡的母鸡。忙完这一切，他才瘫倒在旧沙发上，并让第一位来访者坐到自己身 边。每位来访者均有自己的问题。我对他人的问题不明就里，但我对自己当初去见神父的目的却记忆犹新。 一连九年，约翰神父均未同意我剪发当修士。他留我当见习修士，他提出剪
+发做修士的前提是获得母亲同意。可是我妈妈，上帝保佑她的在天之灵，虽然同 意我以神职人员的身份为教会服务，却不愿我进修道院终身做修士。神父则坚持 他的前提，即等到母亲同意。他常说:你如果真想做一名修士，就请求上帝，他 会在合适的时候安排好一切。
+我对他的话深信不疑。我静静地等待，同时为教会做事，先在普斯科夫洞穴 修道院做见习修士，后在皮季里姆都主教的出版社工作。一次，我去洞穴修道院 见约翰神父，无意间提及，莫斯科东正教徒们十分喜爱的顿河修道院即将重新开 办。此时，约翰神父说道 :
+“你的时机到了。快去求你妈妈为你祝福。我想，这一次她会同意的。你忍 耐了九年，从不装腔作势，你会看到，上帝会给你特殊的仁慈。你会得到一份厚 礼的!”
+随后，神父谈起他年轻时的顿河修道院，谈起被囚禁在那里的圣徒吉洪牧 首，神父对吉洪牧首敬爱有加。神父说道，1990 年，就在我与他此刻所在的修 道小室，他见到了圣徒吉洪牧首，牧首曾预言俄国教会将发生分裂。(这一分裂 后果然在乌克兰发生。)
+最终，约翰神父在他修道小室里的圣母像《逝者的追索》前祷告，然后让我 赶回家中，在取得母亲的祝福后去见至圣牧首，请他允许我剪发当修士。
+由于约翰神父的祷告，妈妈此次出乎意料地赞同我的愿望，并用一帧圣母像 为我祝福。至圣牧首阿列克西二世将我列入莫斯科顿河修道院当时为数不多的教 友行列。
+约翰神父关于“厚礼”的预言也得到应验。事情如此 :顿河修道院院长阿加 福多尔大司祭因修道院事务紧急出差，我的剪发礼因此两度被推迟，最后，他为 我剪发那天恰逢我三十三岁生日，而且，我获教名吉洪，旨在纪念我敬爱的圣 徒、顿河修道院庇护人吉洪。可回忆的往事还有很多 ...... 在瓦连金娜·帕夫洛夫娜·科诺瓦洛娃去世后 不久，我也因病住院。我病得很重，约翰神父托他的教女娜斯佳·戈柳诺娃捎来 一信，准许我在医院吃鱼和奶制品，尽管当时正值圣诞斋戒期。友人们当时为我 安排一家好医院，病房里甚至有电视。病情稍有缓和后，我决定看看电视新闻， 我已有数年没看电视，之后，我又把电视调到有趣的电影频道 ......
+这天傍晚，娜斯佳·戈柳诺娃从洞穴修道院赶来，让护士转交我一封约翰神 父新写的信。我记得我当时正躺在病床上看一部电影，同时阅读神父的信。神父 在信的结尾写道 :“吉洪神父，我祝福你放松斋戒，但不祝福你看电视。”我连 忙下床，拔下电视机的电源插头。我当时已很清楚，不听约翰神父的话将会有何 结果。
+也有一些对约翰神父不怀好意的人。他们或出于他们心知肚明的原因，不承 认他的长老身份。但也有一些人，他们对他充满仇恨。约翰神父痛心地忍受他们 的敌意、诬陷甚至背叛，却始终对他们持有真诚的基督徒之爱。我终生铭记他 1987 年在普斯科夫洞穴修道院米哈伊尔教堂一次布道时所说的话 :“主颁戒律， 让我们爱他人，爱我们的亲人。至于他们是否爱我们，这并不是该我们操心的事 情。我们只需要关心一点，就是我们必须爱他们!”
+一位莫斯科神父曾为约翰神父的教子，一次他突然对我提出一个可怕请求， 即他要向约翰神父归还圣巾，这圣巾作为神职人员的身份象征，是约翰神父在为 他行按手礼前作为祝福授予他的。这位神父称，他对约翰神父深感失望，因为约 翰神父不赞同他的异见教会人士的观点。这位神父吐了多少委屈的苦水啊!可他 自己却任何话也听不进去，不愿了解约翰神父曾在劳改营被关数年，不愿知道约 翰神父曾遭严刑拷打却坚贞不屈，无论如何，约翰神父均非一位随大流的人。
+我怀着沉重的心情把圣巾转交约翰神父。他的反应令我惊讶。他画了一个 十字，虔敬地接过圣巾，亲吻一下，然后说道 :“我怀着爱心给出，也怀着爱心 收回。”
+后来，这位神父转至另一教区，他同样不喜欢那里，又转向第三个教区 ...... 另一证据是老莫斯科人阿德里安·亚历山大罗维奇·叶格罗夫的回忆。他写 道 :“我一生的大半时光均与已故的皮缅主教一起度过。一次我就有关教父的问 题向他询问。他对我说:能担任整个俄国之教父的人或许只有一位，就是约翰神 父。”当约翰神父偶尔来到莫斯科，皮缅牧首总要亲自邀请约翰神父前往他在佩 列捷尔金诺的住处，两人交谈甚久。
+约翰神父对教会高层充满敬重和爱意。他深信，尘世的真理仅存在于教会。 约翰神父无法忍受任何分裂和暴动，始终无所畏惧地反对此类行径，尽管他深知 这会给他带来无数诬陷，有时甚至是仇恨。他是一个真正的教会人。他很多次强 迫我们严格地按至圣牧首的决定去做，按主教和修道院院长的意见去做。
+可这绝不意味着某种机械的、不假思索的服从。有过此类事例，修道院的某 位院长和当家主教要约翰神父为某件他们业已作出、而约翰神父却不赞同的决定 祝福。修道院高层需要用这位长老的威望来支撑他们作出的决定。可是，在教会 近百年的生活经历(约翰·克列斯奇扬金四岁起就在教堂里做祭台小助手)却使 约翰神父意识到，此类管理方式不会带来任何益处。
+他们逼迫神父，即所谓“刀架脖颈”。神父和修士们均清楚，抗拒掌门主教 和院长意味着什么。约翰神父一连多日承受重压。他恭敬地解释，他无法对他心 灵不赞同的东西表达“祝福”。如若修道院高层认为必须那样做，他毫无怨言地 服从他们的决定，因为他们在上帝和教友们面前为他负责。可他认为，在此情形 下接受安排是出于激情。而作出祝福，即说出“好话”，他却无法做到。
+所有提笔追忆约翰神父的人通常均会写道，他为人温和善良，充满爱心。是 的，毫无疑问，我一生从未遇见比他更善于表达父亲般爱心和基督般爱心的人。 但得说明，约翰神父在必要的场合也十分严厉，能说出很重的话来，让对方无地 自容。我记得，当我还在洞穴修道院做见习修士时，曾听见约翰神父对两位年轻 修士说 :“你们算什么修士?你们不过是两个好小伙子!”
+约翰神父从不害怕说真话，无论对方是何人，是主教、是俗家人还是普通的 见习修士，他说真话首先是为对方好。早在童年时期，在与那些伟大的苦修者和后来的受难者们交往时，约翰神父的内心即已养成这一坚定的宗教立场。 这是他 1997 年在一封信中对我所提问题作出的答复 :
+“我生活中遇到一件事，与您的情况有些类似。我当时才十二岁，可那件事 却给我留下十分强烈的印象，那场景时至今日仍历历在目，我还记得所有人的 姓名。
+“在我们奥廖尔有一位杰出的主教，即谢拉菲姆大司祭(奥斯特罗乌莫夫)， 他是一位最智慧、最善良、最有爱心的人，任何最高级形容词用在他身上均不为 过。他以生命为代价，随时准备接受受难圣徒的荆冠，后来情况果然如此。在宽 恕星期日，这位神圣的主教将两位修士 —— 卡里斯特修士和吉洪辅祭赶出修道 院，因为他俩的一桩过错。他毫不留情地当众赶走他们，以警示其他人勿受诱 惑，然后他又立即言及宽恕星期日，请求众人的宽恕。
+“这件事在我的童年意识里留下深刻印象，因为一切都集中在了一起 :从驱 逐，亦即不宽恕，到虔敬的宽恕，再到众人的宽恕。我当时就明白了一点，即惩 罚也可以成为宽恕的开端，没有惩罚也就没有宽恕。
+“如今我仍要向谢拉菲姆主教的勇气和智慧鞠躬致敬，因为他当时给所有在 场者上的那堂课，成了他们终生借鉴的活的范例。”
+约翰神父始终在不屈不饶、充满喜悦地传播他珍视的一个显见真理，即基督 徒的尘世生活与天国教会的生活依靠牢固而又隐秘的精神纽带相互联结。约翰神 父离世的庄严时刻再次佐证了他的这一信念。
+约翰神父在九十六岁时离开我们。他死于一个对他个人而言十分重要的节 日，即俄国新受难者和苦修者纪念日。在残酷的二十世纪为基督献身的那些人， 其中有很多均为约翰神父的导师和密友。他本人也是他们中的一位。在新受难者 纪念日，2006 年 2 月 5 日清晨，在约翰神父领受圣餐之后，上帝将他召去天国。
+即便在约翰神父去世之后，有幸与他结交过的人仍能感受到他的爱意和支 持，他的祷告和关怀。这一切至今仍与我们同在，尽管约翰神父已身在天国。
+2007 年，至圣牧首阿列克西二世的命名日庆祝活动在大斋期第一个星期日举行，此日为东正教胜利节。此前一周，我与奉献节修道院教友们参加了许多令 人难忘的大斋期第一周礼拜仪式。在周六的礼拜之后，参加主教命名日活动的 来宾陆续到达。晚祷前后，直到深夜，我们均忙于接待和安置外地来的神父和 主教，他们在莫斯科通常都落脚于我们奉献节修道院。我忙得疲惫不堪，睡意难 消，便决定把睡前诵读的经文留待第二天早上再读。可令我难堪的是，次日我睡 过头，一句祈祷文也没读，便去基督救主大教堂参加礼拜。
+在我二十年的修士生涯中，我有两三次没做准备便去参加礼拜。每一次，无 论什么理由和原委均无法压抑良心发出的严厉指责，更遑论以疲惫做借口。可这 一次，我仍试图说服自己，我虽然没有事先诵读该读的经书，但我这一周毕竟早 晚都在教堂。周三和周五，还有周六，就是昨天，我还刚刚领受圣餐，读了该读 的经文和祷告文。
+我穿上祭服，正打算走上基督救主大教堂站满修士的祭坛，我甚至想起如今 某些著名神学家的话，他们认为圣餐仪式完全没什么必要 ...... 长话短说，我觉 得我几乎已经说服了我内心的谴责声音，可突然，楚瓦什都主教瓦尔纳瓦走到我 身边。我在牧首主持的礼拜中多次见过这位受众人敬重的年长主教，却从未与他 交谈。可这一次，主教却走到我身边，为我祝福，然后说道 :
+“上帝祝福你，吉洪神父，因为你拍摄的洞穴修道院影片。我非常喜欢这部 影片。我和约翰神父相识五十年，我常去洞穴修道院看他。”
+主教指的是我拍摄的那部以洞穴修道院为对象的纪录片，片中有许多与约翰 神父有关的镜头。
+“你知道我现在想起什么事情了吗?”主教继续说道，“你大约也听说过，约 翰神父五十年代在一个乡村教区做牧师，有一天晚上，在晚祷之后，有几个强盗 冲进他的屋子，把他捆起来，毒打一顿他，然后把他扔在那里，让他等死。你听 说过这事吗?”
+“是的，主教，我知道这件事。第二天早晨做礼拜之前，教友们发现了约翰 神父，为他松了绑。”神父
+
+“是的，是的，是这样的!约翰神父恢复知觉后，感谢上帝让他经受这场考 验，感谢上帝救了他，然后去主持礼拜。你知道他后来对我说过什么话吗?他说 这是他一生中唯一一次没做准备就去主持礼拜，事先没读该读的经文和祈祷文。 唉，就是这样 ...... 上帝保佑他!”
+迪奥尼西大司祭(施施金)站在一旁。我走近他身边，对他说了这件事，说 了我的懈怠，说了我与瓦尔纳瓦主教的谈话。我向迪奥尼西大司祭做忏悔，在等 待仪式开始的时候，我们谈起上帝对我们的恩赐，谈起神意的神秘莫测。
+有谁知道我们此刻见证了什么? ...... 或许，是约翰神父自另一世界借瓦尔 纳瓦主教之口来开导“这个不成熟的孩子”，就像他在一封信中对我的称呼。或 许，我们此时遇见另一位隐秘的修士和上帝的奴仆，因为这些人的存在，基督的 东正教会才永远不会衰落。谢拉菲姆大司祭
+对于我来说，谢拉菲姆神父是普斯科夫洞穴修道院中最为神秘的人。他出身 于波罗的海东岸地区一个男爵家庭，在三十年代来到修道院，侍奉苦修大司祭西 梅翁长老。
+谢拉菲姆神父很少与人交往。他身居一个充作住处的洞穴，里面又湿又暗。 做礼拜时，他低垂脑袋，全身心地投入祷告，时而动作飞快而又虔敬地画个十字。在修道院里走动的谢拉菲姆神父，也总是这副全神贯注的样子。我们这些见 习修士觉得，分散他的注意力就是犯罪。诚然，他时而也主动与我们简短交谈。 譬如，在做完礼拜回修道小室的途中，他总要送一块圣饼给在修道院广场上值班 的修士。再譬如，一位名叫萨沙·施维佐夫的见习修士不知为何想离开修道院， 谢拉菲姆神父突然来到他面前，跺着脚严肃地喊了一句 :“你是走不出修道院 的!”他自己足不出户地在修道院里生活了六十年，他常说 :“我甚至连想都没 想过要走出修道院。”1945 年，我们的士兵曾把他当作德国人，要枪毙他，但 他们最终改变主意，没有开枪。
+谢拉菲姆神父尽管不爱交往，神情严肃，可总体而言他却是一位无比善良、 充满爱心的人。在修道院，众人均敬重他，爱戴他，虽说带有恐惧，更确切地说 是带有颤栗，一如面对一位能在尘世与上帝同在的人，面对一位活圣徒。
+我还记得当年的见闻。我曾任修道院院长加夫里尔大司祭的助祭，我发现， 当谢拉菲姆神父走入祭坛，院长总是赶忙起身离开院长座位，恭敬地前去相迎。 仅谢拉菲姆一人能获院长如此礼遇。
+无论冬夏，谢拉菲姆神父均在清晨四点准时起床，他走出他的洞穴修道小 室，迅速查看一番修道院，看一切是否正常。然后，他返回修道小室，生起炉 子，由于洞穴十分潮湿，一年四季均需烧炉子。我想，谢拉菲姆神父感觉自己是 洞穴修道院的特殊守护人，他也有可能的确肩负使命。无论如何，每当修道院的 教友们面临最为棘手的问题，这位德国男爵的意见，这位伟大的修士、预知未来 的苦修士的意见，总能发挥决定性作用。
+谢拉菲姆神父很少说出什么特别训诫。他简洁的洞穴修道小室的前厅贴着几 张纸，其上文字摘自圣徒吉洪·扎东斯基的著作，来谢拉菲姆神父修道小室的人 均乐意阅读这些摘录，亦乐意听到谢拉菲姆神父的建议 :“你们要多读一读圣徒 吉洪的书。”
+在修道院的生活中，谢拉菲姆神父始终相当节制，这不仅体现于他的饮食、 睡眠和交往。譬如，他在浴室里从不洗淋浴，仅用水两三瓢。当见习修士们问他为何不冲淋浴，并说水有的是，神父便会嘟囔一句，称洗淋浴就像是吃巧克力。 1983 年的一天，我有机会前往基维耶沃。这机会在当年要比现在更难得， 因为基维耶沃靠近一座不开放的军事城市。基维耶沃的年长修女们送我一小块石 头，它来自一块大石头，圣徒谢拉菲姆·萨罗夫斯基曾坐在那块大石头上祈祷。 回到洞穴修道院后，我决定去见谢拉菲姆神父，把这件与他的精神庇护者相关的
+圣物送给他。
+
+
 </div>
 
 
